--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Өөрчлөх"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Төхөөрөмжийн дэлгэрэнгүй"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Гарын тохиргоо"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Бусад тохиргоо"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Жижиг программын шинэчлэлт, үүний тухай ба бусад"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Төхөөрөмжийн Bluetooth хаяг: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Төхөөрөмжийн Bluetooth хаяг:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Төхөөрөмжийг мартах уу?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Туршилтын. Аудио чанарыг сайжруулна."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Төхөөрөмжийг мартах"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Аппыг салгах"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Бусад тохиргоо"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Холбогдсон Bluetooth аудио төхөөрөмжийн дээд тоо"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Холбогдсон Bluetooth аудио төхөөрөмжийн дээд тоог сонгох"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC нуршсан дэлгэрэнгүй байдлын нийлүүлэгчийн дебагийн лог"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"<xliff:g id="CARRIER">%1$s</xliff:g>-г мобайл датад ашиглах уу?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Та <xliff:g id="CARRIER2_0">%2$s</xliff:g>-г мобайл датад ашиглаж байна. Хэрэв та <xliff:g id="CARRIER1">%1$s</xliff:g> руу сэлгэвэл <xliff:g id="CARRIER2_1">%2$s</xliff:g>-г мобайл датад ашиглах боломжгүй."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>-г ашиглах"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Сонгосон SIM-г шинэчлэх үү?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"Таны төхөөрөмжид зөвхөн <xliff:g id="NEW_SIM">%1$s</xliff:g> SIM байна. Та мобайл дата ашиглах, дуудлага хийх, SMS мессежийн үйлчилгээ авахын тулд энэ SIM-г ашиглах уу?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Мобайл датаны хамрах хүрээг сайжруулах уу?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>-г илүү сайн сүлжээтэй үед төхөөрөмжөө түүн рүү автоматаар сэлгэж, мобайл дата ашиглахыг зөвшөөрнө үү."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Дуудлага, мессеж болон сүлжээний ачаалал нь танай байгууллагад харагдаж магадгүй."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Мэдрэгч самбарын навигацын бие даасан зангааг өөрчлөх"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Урвуу гүйлгэх"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Таныг доош гүйлгэх үед контентыг дээш зөөх"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Баруун доод буланг товших"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Бусад сонголтыг авах бол мэдрэгч самбарын баруун доод буланг товших"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Баруун доор товших"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Бусад сонголтыг харах бол мэдрэгч самбарын баруун доор товш"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Заагчийн хурд"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Заагчийг дүүргэх загвар"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Заагчийг дүүргэх загварыг хар болго"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Асаалттай / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> болон <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Мөн та Bluetooth төхөөрөмжид зориулсан орчны аудиог асааж болно."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Холбогдсон төхөөрөмжүүдийн тохиргоо"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Орчны аудио"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Унтраалттай"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Унтраалттай"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Унтраалттай"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Байхгүй}=1{1 хуваарийг тохируулсан}other{# хуваарийг тохируулсан}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Бүү саад бол"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Чухал байдлаар нь ангилах горим"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"бараан загварыг идэвхжүүлэх"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"OS, аппуудыг бараан дэвсгэр дээрх цайвар текстийг илүүд үзэх болгож сэлгэнэ үү. Энэ нь нүдэнд амар байж болох бөгөөд зарим төхөөрөмж дээр батарей ихээр хэмнэдэг"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Дэлгэцийн ямар ч өөрчлөлт байхгүй}=1{{effect_1}}=2{{effect_1}, {effect_2}}=3{{effect_1}, {effect_2}, {effect_3}}other{{effect_1}, {effect_2}, өөр #}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Танд юу мэдэгдэж болохыг хязгаарлах"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Ямар ч тасалдлыг шүүгээгүй"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Бүх мэдэгдлийг зөвшөөрөх"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Хүн, апп, дуу чимээ тасалдуулах боломжтой"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Шүүсэн мэдэгдэлд зориулсан дэлгэцийн сонголтууд"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Бүү саад бол горим асаалттай үед"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Мэдэгдлийн дууг хаах"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Энэ нь мэдэгдлийг түр хойшлуулах, хаах болон дуудлагад хариулах зэргийг оруулаад мессежид хариу бичих, мэдэгдэл дэх товчлуурууд дээр үйлдэл хийх боломжтой."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Тохиргоог өөрчлөх"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Энэ нь Бүү саад бол горимыг асаах, унтраах болон холбоотой тохиргоог өөрчлөх боломжтой."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Энэ нь Давуу эрхтэй горимыг удирдах, идэвхжүүлэх, холбоотой тохиргоог өөрчлөх боломжтой."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Хэрэв та <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>-н мэдэгдлийн хандалтыг унтраавал Бүү саад бол хандалт мөн адил унтрах болно."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Хэрэв та <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>-н мэдэгдлийн хандалтыг унтраавал Давуу эрхтэй горимын хандалт мөн унтарч магадгүй."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Унтраах"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Цуцлах"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Тухайн агшин"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\"Бүү саад бол\" хандалт"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Бүү саад бол горимыг зөвшөөрөх"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Суулгасан апп-аас \"Бүү саад бол\" хандалтыг хүссэн апп байхгүй байна."</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Давуу эрхтэй горимын хандалт"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Давуу эрхтэй горимын хандалтыг зөвшөөрөх"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Суулгасан ямар ч апп Давуу эрхтэй горимд хандах хүсэлт гаргаагүй"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Та энэ аппаас мэдэгдэл хүлээн авахыг зөвшөөрөөгүй"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Андройд таны хүсэлтээр энэ ангиллын мэдэгдлийг тус төхөөрөмжид харуулахыг хориглож байна"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Андройд таны хүсэлтээр энэ бүлэг мэдэгдлийг энэ төхөөрөмжид харуулахыг хориглож байна"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Чимээгүй орчин бүрдүүлэхийн тулд бүх саад болох зүйлийг арилгаарай"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Өөр өөр хэрэглэгчид зориулж төхөөрөмжийн хэрэглээ болон тохиргоог хувийн болгоорой"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Зөвхөн чухал хүмүүс болон аппуудад тантай холбогдохыг зөвшөөрч, саад болох зүйлсийг багасгаарай"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Тогтмол хуваарийг дагадаг горим тохируулаарай"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Төхөөрөмжөө өдрийнхөө үйл явдлуудтай синк хийсэн хэвээр байлгаарай"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"100% эрч хүчтэй мэт сэрээрэй"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Замд явж байхдаа аюулгүй байдлыг нэгт тавиарай"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Бүрэн төвлөрөхийн тулд төвлөрлийг нэмэгдүүлээрэй"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Эелдэг байдал хэрэгтэй мөчүүдэд зориулсан"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Таныг санаа зовох зүйлгүй байхад туслах хөтөчтэй ашиглалт"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Анхаарал төвлөрлөө хяналтдаа аваарай"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Сануулга"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Хаах"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Энэ төхөөрөмжийн талаар санал илгээх"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Мэдэгдлийн хандалт асаалттай байгаа тул асаалттай хэвээр байх шаардлагатай"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g>-ын \"Бүү саад бол\" хандалтыг цуцлах уу?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Энэ апп-аас үүсгэсэн \"Бүү саад бол\" дүрэм нь хүчингүй болно."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g>-д Давуу эрхтэй горимд хандах эрх өгөх үү?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Энэ апп Бүү саад бол онцлогийг асаах/унтраах, Давуу эрхтэй горимыг удирдах, идэвхжүүлэх, холбоотой тохиргоонд өөрчлөлт хийх боломжтой болно."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g>-н Давуу эрхтэй горимын хандалтыг цуцлах уу?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Энэ аппын үүсгэсэн бүх горимыг хасна."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Оновчлохгүй"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Оновчлох"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Таны батарейг хурдан дуусгаж болзошгүй. Цаашид аппыг батарейг дэвсгэрт ашиглахаас сэргийлэхгүй."</string>
