--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"बदला"</string>
     <string name="device_details_title" msgid="1155622417516195481">"डिव्हाइस तपशील"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"कीबोर्ड सेटिंग्ज"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"आणखी सेटिंग्ज"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"फर्मवेअर अपडेट, याविषयी आणि आणखी बरेच काही"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"डिव्हाइसचा ब्लूटूथ अ‍ॅड्रेस: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"डिव्हाइसचा ब्लूटूथ अ‍ॅड्रेस:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"डिव्हाइस विसरायचे का?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"प्रायोगिक. ऑडिओची गुणवत्ता सुधारते."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"डिव्हाइस विसरा"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"अ‍ॅप डिस्कनेक्‍ट करा"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"आणखी सेटिंग्ज"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"जास्तीत जास्त कनेक्ट होऊ शकणारी ऑडिओ डिव्हाइस"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"जास्तीत जास्त कनेक्ट होऊ शकणार्‍या ऑडिओ डिव्हाइसची संख्या निवडा"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC व्हर्बोझ विक्रेता डीबग लॉग"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"मोबाइल डेटासाठी <xliff:g id="CARRIER">%1$s</xliff:g> वापरायचे?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"तुम्ही मोबाइल डेटासाठी <xliff:g id="CARRIER2_0">%2$s</xliff:g> वापरत आहात. तुम्ही <xliff:g id="CARRIER1">%1$s</xliff:g> वर स्विच केल्यास, मोबाइल डेटासाठी <xliff:g id="CARRIER2_1">%2$s</xliff:g> वापरले जाणार नाही."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> वापरा"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"प्राधान्यकृत सिम अपडेट करायचे?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"तुमच्या मोबाइल डिव्‍हाइसमध्‍ये केवळ <xliff:g id="NEW_SIM">%1$s</xliff:g> सिम आहे. तुम्ही मोबाइल डेटा, कॉल आणि एसएमएस मेसेजसाठी हे सिम वापरू इच्छिता का?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"मोबाइल डेटा कव्हरेज सुधारायचे का?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"अधिक चांगली उपलब्धता असताना तुमच्या डिव्हाइसला मोबाइल डेटासाठी आपोआप <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> वर स्विच करण्याची अनुमती द्या."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"कॉल, Messages आणि नेटवर्क ट्रॅफिक तुमच्या संस्थेला दृश्यमान असू शकते."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"वैयक्तिक टचपॅड नेव्हिगेट जेश्चर कस्टमाइझ करा"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"स्क्रोलिंग उलट करा"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"तुम्ही खालती स्क्रोल करता तेव्हा आशय वरती हलतो"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"तळाशी उजवीकडे टॅप करा"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"अधिक पर्यायांसाठी टचपॅडच्या तळाशी उजव्या कोपऱ्यावर टॅप करा"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"तळाशी उजवीकडे क्लिक करा"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"अधिक पर्यायांसाठी टचपॅडच्या तळाशी उजव्या कोपऱ्यावर क्लिक करा"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"पॉइंटर वेग"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"पॉइंटर फिलची शैली"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"पॉइंटर फिलची शैली बदलून काळी करा"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"गडद थीम सुरू करा"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"गडद बॅकग्राउंडवर फिकट मजकुराला प्राधान्य देण्यासाठी OS आणि ॲप्स स्विच करा, ज्यामुळे डोळ्यांवर ताण येत नाही व काही डिव्हाइसवर लक्षणीय प्रमाणात बॅटरीची बचत होते"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{No display changes}=1{{effect_1}}=2{{effect_1} आणि {effect_2}}=3{{effect_1}, {effect_2} आणि {effect_3}}other{{effect_1}, {effect_2} आणि आणखी #}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"कशाबाबत सूचित केले जाऊ शकते ते मर्यादित करा"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"कोणतेही व्यत्यय फिल्टर केलेले नाहीत"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"सर्व नोटिफिकेशनना अनुमती द्या"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"लोक, ॲप्स आणि आवाज व्यत्यय आणू शकतात"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"फिल्टर केलेल्या नोटिफिकेशनसाठी डिस्प्ले पर्याय"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"व्यत्यय आणू नका सुरू असते तेव्हा"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"सूचना आल्यावर आवाज नाही"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ते मेसेजना उत्तर देऊ शकते आणि सूचना स्नूझ करणे किंवा डिसमिस करणे व कॉलना उत्तर देणे यांच्या समावेशसह सूचनांमधील बटणांवर कृती करू शकते."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"सेटिंग्ज बदला"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ते व्यत्यय आणू नका हे सुरू किंवा बंद करू शकते आणि संबंधित सेटिंग्ज बदलू शकते."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"हे प्राधान्य मोड व्यवस्थापित आणि ॲक्टिव्हेट करू शकते व संबंधित सेटिंग्जदेखील बदलू शकते."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"तुम्ही <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> साठी सूचनांमधील अ‍ॅक्सेस बंद केल्यास, व्यत्यय आणू नका मधील अ‍ॅक्सेसदेखील बंद केला जाऊ शकतो."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"तुम्ही <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> साठी नोटिफिकेशन अ‍ॅक्सेस बंद केल्यास, प्राधान्य मोड अ‍ॅक्सेसदेखील बंद केला जाऊ शकतो."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"बंद करा"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"रद्द करा"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"रीअल-टाइम"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"व्यत्यय आणू नका अ‍ॅक्सेस"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"व्यत्यय आणू नका ची अनुमती द्या"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"कोणत्याही इंस्टॉल केलेल्या ॲप्सने व्यत्यय आणू नका प्रवेशाची विनंती केली नाही"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"प्राधान्य मोड अ‍ॅक्सेस"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"प्राधान्य मोड अ‍ॅक्सेस करण्याची अनुमती द्या"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"इंस्टॉल केलेल्या कोणत्याही अ‍ॅप्सनी प्राधान्य मोड अ‍ॅक्सेस करण्याची विनंती केलेली नाही"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"तुम्ही या अ‍ॅपमधील नोटिफिकेशनना अनुमती दिलेली नाही"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"तुमच्या विनंतीनुसार Android, सूचनांच्या या वर्गवारीचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"तुमच्या विनंतीनुसार Android, सूचनांच्या या समूहाचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"शांत वातावरणासाठी सर्व व्यत्यय दूर करा"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"वेगवेगळ्या वापरकर्त्यांसाठी डिव्हाइस अनुभव आणि सेटिंग्ज पर्सनलाइझ करा"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"फक्त महत्त्वाच्या व्यक्ती आणि ॲप्सना तुमच्याशी संपर्क साधण्याची अनुमती देऊन व्यत्यय कमी करा"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"नियमित शेड्यूल फॉलो करणारा मोड सेट करा"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"तुमचे डिव्हाइस हे तुमच्या दिवसाच्या इव्हेंटसोबत सिंकमध्ये ठेवा"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"पूर्णपणे जाग आल्याचा अनुभव घ्या"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"रस्त्यावरून प्रवास करताना सुरक्षिततेला प्राधान्य द्या"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"तल्लीन होऊन काम करण्यासाठी लक्ष केंद्रित करा"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"सौजन्य महत्त्वाचे असते अशा क्षणांसाठी"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"तुमची काळजी घेतली जाण्यात मदत व्हावी यासाठी मार्गदर्शित वापर"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"तुमचे लक्ष नियंत्रित करा"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"चेतावणी"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"बंद करा"</string>
     <string name="device_feedback" msgid="5351614458411688608">"या डिव्हाइसबद्दल फीडबॅक पाठवा"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"सूचना अ‍ॅक्सेस सुरू असल्याने सुरू केलेले ठेवणे आवश्यक आहे"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> साठी व्यत्यय आणू नका मध्‍ये प्रवेश करणे रद्द करायचे?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"या ॲपने तयार केलेले सर्व व्यत्यय आणू नका नियम काढले जातील."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> साठी प्राधान्य मोड अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ॲप हे व्यत्यय आणू नका सुरू/बंद करण्‍यास, प्राधान्य मोड व्यवस्थापित आणि ॲक्टिव्हेट करण्यास व संबंधित सेटिंग्जमध्ये बदल करण्यास सक्षम असेल."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> साठी प्राधान्य मोड अ‍ॅक्सेस मागे घ्यायचा आहे का?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"या अ‍ॅपद्वारे तयार केलेले सर्व मोड काढून टाकले जातील."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ऑप्टिमाइझ करू नका"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"तुमची बॅटरी खूप लवकर संपवू शकते. यापुढे अ‍ॅप बॅकग्राउंड बॅटरी वापरण्यापासून प्रतिबंधित नसेल."</string>
