--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Dəyişin"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Cihaz məlumatları"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Klaviatura ayarları"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Digər ayarlar"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Proqram güncəlləmələri, haqqında və s."</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Cihazın Bluetooth ünvanı: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Cihazın Bluetooth ünvanı:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Cihaz unudulsun?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Təcrübi. Audio keyfiyyəti yaxşılaşır."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Cihazı unudun"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Tətbiqi ayırın"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Digər ayarlar"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Qoşulu Bluetooth audiocihazlarının maksimal sayı"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Qoşulu Bluetooth audiocihazlarının maksimal sayını bildirin"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC təfsilatlı təchizatçı sazlama jurnalı"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Mobil data üçün <xliff:g id="CARRIER">%1$s</xliff:g> istifadə edilsin?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Mobil data üçün <xliff:g id="CARRIER2_0">%2$s</xliff:g> operatorundan istifadə edirsiniz. <xliff:g id="CARRIER1">%1$s</xliff:g> operatoruna keçsəniz, <xliff:g id="CARRIER2_1">%2$s</xliff:g> artıq mobil data üçün istifadə olunmayacaq."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> istifadə edin"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Tərcih edilən SIM yenilənsin?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> cihazdakı yeganə SIM-dir. Bu SIM-i mobil data, zəng və SMS mesajları üçün istifadə etmək istəyirsiniz?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Mobil data əhatə dairəsi yaxşılaşdırılsın?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Daha güclü siqnal olduqda, cihazınızın mobil data üçün avtomatik olaraq <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> operatoruna keçməsinə icazə verin."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Zənglər, mesajlar və şəbəkə trafiki təşkilatınıza görünə bilər."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Fərdi taçped naviqasiya jestlərini fərdiləşdirin"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Tərs sürüşdürmə"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Aşağı sürüşdürdükdə məzmun yuxarı hərəkət edir"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Aşağı sağa toxunma"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Digər seçimlər üçün taçpedin aşağı sağ küncünə toxunun"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Aşağı sağ tərəfə klikləyin"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Digər seçimlər üçün taçpedin aşağı sağ küncünə klikləyin"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Kursor sürəti"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Poynter doldurma üslubu"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Poynter doldurma üslubunu qaraya dəyişin"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Aktiv / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> və <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Həmçinin Bluetooth cihazları üçün Məkan Audiosunu aktiv edə bilərsiniz."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Qoşulmuş cihazların ayarları"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Məkani səs"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Deaktiv"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Deaktiv"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Deaktiv"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Heç biri}=1{1 cədvəl ayarlanıb}other{# cədvəl ayarlanıb}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Narahat etməyin"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioritet rejimləri"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"tünd temanı aktivləşdirin"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Qaranlıq arxa fonda açıq mətnə üstünlük vermək üçün ƏS və tətbiqləri dəyişin. Bu, gözləri daha az yora bilər və bəzi cihazlarda əhəmiyyətli enerji qənaəti təmin edir."</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Displey dəyişikliyi yoxdur}=1{{effect_1}}=2{{effect_1} və {effect_2}}=3{{effect_1}, {effect_2} və {effect_3}}other{{effect_1}, {effect_2} və daha # effekt}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Bildiriş göndərən tətbiqləri məhdudlaşdırın"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Kəsinti filtrlənməyib"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Bütün bildirişlərə icazə verin"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"İnsanlar, tətbiqlər və səslər mane ola bilər"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Filtrlənmiş bildirişlər üzrə seçimləri göstərin"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\"Narahat Etməyin\" rejimi aktiv olduqda"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Bildirişlər səssiz olsun"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"O, mesajlara cavab verə və bildirişləri ertələmək və ya qapatmaq və zənglərə cavab vermək kimi bildirişlərdəki düymələr üzərində əməliyyat apara bilər."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Ayarları dəyişin"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"O, \"Narahat Etməyin\" rejimini aktiv və ya deaktiv edə, həmçinin əlaqədar ayarları dəyişə bilər."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Prioritet Rejimləri idarə edə və aktivləşdirə, habelə əlaqədar ayarları dəyişə bilər."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Bildiriş girişini <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> üçün deaktiv etsəniz, Narahat Etməyin girişi də deaktiv edilə bilər."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> üçün bildirişə girişi söndürsəniz, Prioritet Rejimlərə giriş də söndürülə bilər."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Söndür"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Ləğv edin"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Real zaman"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\"Narahat etməyin\" girişi"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\"Narahat etməyin\" rejiminə icazə verin"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Heç bir tətbiq \"Narahat etməyin\" girişi sorğusu göndərməyib"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Prioritet Rejimlərə giriş"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Prioritet Rejimlərə girişə icazə verin"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Heç bir quraşdırılmış tətbiq Prioritet Rejimlərə giriş tələb etməyib"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Bu tətbiqdən bildirişlərə icazə verməmisiniz"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Bu kateqoriya bildirişləri deaktivdir."</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Bu kateqoriya bildirişləri deaktivdir."</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Sakit mühit üçün diqqətinizi yayındıran bütün amilləri aradan qaldırın"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Müxtəlif istifadəçilər üçün cihaz təcrübələri və ayarlarını fərdiləşdirin"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Yalnız vacib insan və tətbiqlərin sizinlə əlaqə saxlamasına icazə verməklə fasilələri minimuma endirin"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Müntəzəm cədvələ uyğun rejim qurun"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Cihazı günün hadisələri ilə sinxron saxlayın"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Tam enerji ilə oyanın"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Yolda ikən təhlükəsizliyə diqqət yetirin"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Diqqəti cəmləmək üçün fokuslanın"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Nəzakətin vacib olduğu anlar üçün"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Etibarlı əllərdə olmaq üçün yönləndirilən istifadə"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Diqqətinizi cəmləyin"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Xəbərdarlıq"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Bağlayın"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Bu cihaz haqqında fikrinizi bildirin"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Bildiriş girişi aktiv olduğu üçün aktiv qalmağa davam etməlisiniz"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> tətbiqi üçün \"Narahat Etməyin\" funksiyasına giriş ləğv edilsin?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Bu tətbiq tərəfindən yaradılmış bütün Narahat Etməyin qaydaları silinəcək."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> üçün Prioritet Rejimlərə giriş imkanı verilsin?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Tətbiq \"Narahat Etməyin\" rejimini yandırıb/söndürə, Prioritet Rejimləri idarə edə və aktivləşdirə, habelə əlaqədar ayarlara dəyişiklik edə biləcək."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> üçün Prioritet Rejimlərə giriş ləğv edilsin?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Bu tətbiq tərəfindən yaradılmış bütün rejimlər silinəcək."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Optimallaşdırmayın"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimallaşdırın"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Batareyanın tez qurtarmasına səbəb ola bilər. Artıq tətbiqin arxa fonda batareyadan istifadə etməsi məhdudlaşdırılmayacaq."</string>
