--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"পরিবর্তন করুন"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ডিভাইসের বিবরণ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"কীবোর্ড সেটিংস"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"আরও সেটিংস"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ফার্মওয়্যার আপডেট, সম্পর্কে ও আরও অনেক কিছু"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ডিভাইসের ব্লুটুথ অ্যাড্রেস: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ডিভাইসের ব্লুটুথ অ্যাড্রেস:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ডিভাইসটি কি ভুলে যাবেন?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"পরীক্ষামূলক। অডিও কোয়ালিটি উন্নত করে।"</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"ডিভাইসটি ভুলে যান"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"অ্যাপ ডিসকানেক্ট করুন"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"আরও সেটিংস"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ব্লুটুথের মাধ্যমে কানেক্ট সর্বাধিক অডিও ডিভাইস"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"সর্বাধিক কতগুলি অডিও ডিভাইস ব্লুটুথের মাধ্যমে কানেক্ট করা যাবে তা নির্দিষ্ট করুন"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ভার্বোস ভেন্ডর ডিবাগ লগ"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ডেটার জন্য <xliff:g id="CARRIER">%1$s</xliff:g> ব্যবহার করবেন?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"মোবাইল ডেটার জন্য আপনি <xliff:g id="CARRIER2_0">%2$s</xliff:g> ব্যবহার করছেন। <xliff:g id="CARRIER1">%1$s</xliff:g>-এ পাল্টালে, মোবাইল ডেটার জন্য <xliff:g id="CARRIER2_1">%2$s</xliff:g> আর ব্যবহার করা হবে না।"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ব্যবহার করুন"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"পছন্দের সিম আপডেট করবেন?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"আপনার ডিভাইসে একটিই সিম, <xliff:g id="NEW_SIM">%1$s</xliff:g> রয়েছে। আপনি কি মোবাইল ডেটা, কল এবং এসএমএসের জন্য এটি ব্যবহার করতে চান?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"মোবাইল ডেটা কভারেজ ভাল করবেন?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"আরও ভাল নেটওয়ার্ক উপলভ্য থাকলে, মোবাইল ডেটার জন্য আপনার ডিভাইসকে অটোমেটিক <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>-এ পরিবর্তন করার অনুমতি দিন।"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"আপনার সংস্থা হয়ত কল, মেসেজ ও নেটওয়ার্ক ট্রাফিক দেখতে পাবে।"</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"ব্যক্তিগত টাচপ্যাড নেভিগেশন সংক্রান্ত জেসচার কাস্টমাইজ করুন"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"উল্টো দিকে স্ক্রল করা"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"আপনি নিচের দিকে স্ক্রল করলে কন্টেন্ট উপরে উঠে যায়"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ডানদিকের-নিচে ট্যাপ করা"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"আরও বিকল্পের জন্য টাচপ্যাডের নিচে ডানদিকের কোণায় ট্যাপ করুন"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"একদম নিচে ডানদিকে ক্লিক করুন"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"আরও বিকল্পের জন্য টাচপ্যাডের নিচে ডানদিকের কোণায় ক্লিক করুন"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"পয়েন্টারের গতি"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"পয়েন্টার ফিল স্টাইল"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"পয়েন্টার ফিল স্টাইল বদলে কালো করুন"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"চালু আছে / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> এবং <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"এছাড়া, ব্লুটুথ ডিভাইসের জন্য আপনি \'স্পেশিয়ল অডিও\' ফিচার চালু করতে পারবেন।"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"কানেক্ট করা ডিভাইসের সেটিংস"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"স্পেশিয়ল অডিও"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"বন্ধ আছে"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"বন্ধ আছে"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"বন্ধ আছে"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{একটিও নেই}=1{১টি শিডিউল সেট করা হয়েছে}one{#টি শিডিউল সেট করা হয়েছে}other{#টি শিডিউল সেট করা হয়েছে}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"বিরক্ত করবে না"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"অগ্রাধিকার মোড"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ডার্ক থিম চালু করুন"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ডার্ক ব্যাকগ্রাউন্ডের উপর হালকা টেক্সট পড়তে OS ও অ্যাপের থিমে পরিবর্তন করুন, এটি চোখের পক্ষে আরামদায়ক হতে পারে এবং কিছু ডিভাইসে যথেষ্ট ব্যাটারি সাশ্রয় করতে পারে"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ডিসপ্লেতে কোনও পরিবর্তন হয়নি}=1{{effect_1}}=2{{effect_1} ও {effect_2}}=3{{effect_1}, {effect_2} ও {effect_3}}one{{effect_1}, {effect_2} ও আরও #টি}other{{effect_1}, {effect_2} ও আরও #টি}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"আপনি কোন বিষয়ে বিজ্ঞপ্তি পাবেন তা সীমিত করুন"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"কোনও ইন্টারাপশন, ফিল্টার করা হয়নি"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"সব বিজ্ঞপ্তিকে অনুমতি দিন"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"লোকজন, অ্যাপ ও সাউন্ড বাধা দিতে পারবে"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ফিল্টার করা বিজ্ঞপ্তির জন্য ডিসপ্লে বিকল্প"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"যখন \'বিরক্ত করবে না\' চালু থাকবে"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"বিজ্ঞপ্তি থেকে কোনও সাউন্ড হবে না"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"এটি বিজ্ঞপ্তি স্নুজ বা বাতিল করা ও কলের উত্তর দেওয়া সহ বিজ্ঞপ্তিতে দেখানো বোতামের উপর অ্যাকশন এবং মেসেজের উত্তর দিতে পারে।"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"এটি সেটিংসে পরিবর্তন করতে পারে"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"এটি \'বিরক্ত করবে না\' চালু বা বন্ধ করতে এবং সেই সম্পর্কিত সেটিংসে পরিবর্তন করতে পারে।"</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"এটি প্রায়োরিটি মোড ম্য়ানেজ করে চালু করতে ও সম্পর্কিত সেটিংস পরিবর্তন করতে পারবেন।"</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"আপনি <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>-এর জন্য বিজ্ঞপ্তির অ্যাক্সেস বন্ধ করলে, \'বিরক্ত করবে না\'-এর অ্যাক্সেসও বন্ধ হয়ে যেতে পারে৷"</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"আপনি যদি <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>-এর জন্য বিজ্ঞপ্তির অ্যাক্সেস বন্ধ করেন, প্রায়োরিটি মোডের অ্যাক্সেসও বন্ধ হতে পারে।"</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"বন্ধ করুন"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"বাতিল করুন"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"রিয়েল-টাইম"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"বিরক্ত করবে না মোডের ক্ষেত্রে অ্যাক্সেস"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'বিরক্ত করবে না\' মোডের জন্য অনুমতি দিন"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ইনস্টল করা নেই এমন অ্যাপগুলি বিরক্ত করবে না অ্যাক্সেস করুন এর অনুরোধ জানিয়েছে"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"প্রায়োরিটি মোডের অ্যাক্সেস"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"প্রায়োরিটি মোডের অ্যাক্সেস অনুমতি দিন"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"কোনও ইনস্টল করা অ্যাপ প্রায়োরিটি মোডের অ্যাক্সেসের অনুরোধ করেনি"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"এই অ্যাপ থেকে বিজ্ঞপ্তি পাওয়ার অনুমতি দেননি"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"আপনার অনুরোধ অনুযায়ী Android এই বিভাগের বিজ্ঞপ্তিগুলি এই ডিভাইসে দেখাচ্ছে না"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"আপনার অনুরোধ অনুযায়ী Android এই ধরনের বিজ্ঞপ্তিগুলি এই ডিভাইসে দেখাচ্ছে না"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"শান্ত পরিবেশের জন্য মনোসংযোগ বিঘ্ন ঘটাতে পারে এমন সব বিজ্ঞপ্তি বন্ধ করুন"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"বিভিন্ন ব্যবহারকারীর জন্য, ডিভাইসের অভিজ্ঞতা ও সেটিংস পছন্দমতো করে তুলুন"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"বাধা কমাতে, শুধুমাত্র প্রয়োজনীয় ব্যক্তি এবং অ্যাপে বিজ্ঞপ্তির অনুমতি দিন"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"নিয়মিত শিডিউল অনুসরণ করে এমন একটি মোড সেট করুন"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"আপনার সারাদিনের ইভেন্টের সাথে ডিভাইসটি সিঙ্ক করে রাখুন"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"সম্পূর্ণ সতেজতার সাথে দিনের শুরু করুন"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"গাড়ি চালানোর সময় সুরক্ষায় সবচেয়ে বেশি গুরুত্ব দিন"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"আপনার কাজে মনোযোগী থাকুন"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"সেই মুহুর্তগুলির জন্য যখন সৌজন্যতা গুরুত্বপূর্ণ"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"আপনাকে সুরক্ষিত রাখতে পরিষেবা ব্যবহার করার জন্য নির্দেশিকা"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"আপনার ফোকাস রাখুন"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"সতর্কতা"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"বন্ধ করুন"</string>
     <string name="device_feedback" msgid="5351614458411688608">"এই ডিভাইসের সম্পর্কে মতামত পাঠান"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"বিজ্ঞপ্তির অ্যাক্সেস চালু থাকার কারণে এটিকে অবশ্যই চালু থাকতে হবে"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> এর জন্য \'বিরক্ত করবে না\' তে অ্যাক্সেস প্রত্যাহার করবেন?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"এই অ্যাপের দ্বারা তৈরি হওয়া সমস্ত \'বিরক্ত করবে না\' নিয়মগুলিকে সরানো হবে৷"</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> অ্যাপের জন্য প্রায়োরিটি মোডের অ্যাক্সেসের অনুমতি দিতে চান?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"অ্যাপ \'বিরক্ত করবে না\' মোড চালু/বন্ধ করা, প্রায়োরিটি মোড ম্যানেজ করা ও চালু করা এবং সম্পর্কিত সেটিংসে পরিবর্তন করা।"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> অ্যাপের জন্য প্রায়োরিটি মোডের অ্যাক্সেস সরিয়ে নিতে চান?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"এই অ্যাপের তৈরি করা সব মোড সরিয়ে দেওয়া হবে।"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"অপ্টিমাইজ করবেন না"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"এতে চার্জ আরও দ্রুত শেষ হয়ে যেতে পারে। ব্যাকগ্রাউন্ডে ব্যাটারি ব্যবহার করা থেকে অ্যাপটিকে আর সীমাবদ্ধ করা হবে না।"</string>
