--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -302,7 +302,7 @@
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"Edellyttää käyttöönottoa"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Kasvojentunnistusavaus"</string>
     <string name="security_settings_face_profile_preference_title" msgid="7519527436266375005">"Kasvojentunnistusavaus työkäyttöön"</string>
-    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"Kasvojen&amp;shy;tunnistus&amp;shy;avauksen käyttöönotto"</string>
+    <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"Kasvojentunnistusavauksen käyttöönotto"</string>
     <string name="security_settings_face_enroll_education_title_accessibility" msgid="3701874093226957891">"Ota kasvojentunnistusavaus käyttöön"</string>
     <string name="security_settings_face_enroll_education_title_unlock_disabled" msgid="8810954233979716906">"Todennus kasvojen avulla"</string>
     <string name="security_settings_face_enroll_education_message" msgid="4308030157487176799"></string>
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Muuta"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Laitteen tiedot"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Näppäimistön asetukset"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Lisää asetuksia"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Laiteohjelmistopäivitykset, tietoja ja muuta"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Laitteen Bluetooth-osoite: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Laitteen Bluetooth-osoite: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Unohdetaanko laite?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Kokeellinen. Parantaa äänen laatua."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Unohda laite"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Katkaise sovelluksen yhteys"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Lisää asetuksia"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Liitettyjen Bluetooth-äänilaitteiden enimmäismäärä"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Valitse liitettyjen Bluetooth-äänilaitteiden enimmäismäärä"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Myyjien laajennettu NFC-virheenkorjausloki"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Käytetäänkö mobiilidataa (<xliff:g id="CARRIER">%1$s</xliff:g>)?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Käytät mobiilidataa (<xliff:g id="CARRIER2_0">%2$s</xliff:g>). Jos <xliff:g id="CARRIER1">%1$s</xliff:g> otetaan käyttöön, <xliff:g id="CARRIER2_1">%2$s</xliff:g> ei enää käytä mobiilidataa."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Valitse <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Vaihdetaanko ensisijainen SIM?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> on laitteesi ainoa SIM-kortti. Haluatko käyttää korttia mobiilidataan, puheluihin ja tekstiviesteihin?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Parannetaanko mobiilidataa?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Salli laitteen ottaa <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> automaattisesti käyttöön mobiilidataa varten, kun sen saatavuus on parempi."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Puhelut, viestit ja verkkoliikenne voivat näkyä organisaatiolle."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Luo yksilöllisiä kosketuslevyn navigointieleitä"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Käänteinen vieritys"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Sisältö siirtyy ylös, kun vierität alas"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Napauta oikeaa alareunaa"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Lisäasetukset: napauta kosketuslevyn oikeaa alareunaa"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Klikkaa oikeaa alakulmaa"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Lisäasetukset: klikkaa kosketuslevyn oikeaa alakulmaa"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Osoittimen nopeus"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Osoittimen täytön tyyli"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Musta osoittimen täytön tyyli"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Päällä / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> ja <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Voit laittaa tila-audion päälle myös Bluetooth-laitteilla."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Verkkoon yhdistettävien laitteiden asetukset"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Tila-audio"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Pois päältä"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Pois päältä"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Pois päältä"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Ei yhtään}=1{1 aikataulu luotu}other{# aikataulua luotu}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Älä häiritse"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Prioriteettitilat"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ota tumma teema käyttöön"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Vaihda käyttöjärjestelmään ja sovelluksiin vaalea teksti tummalla taustalla, mikä voi rasittaa silmiä vähemmän ja säästää akkua merkittävästi joillakin laitteilla"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Ei muutoksia näyttöön}=1{{effect_1}}=2{{effect_1} ja {effect_2}}=3{{effect_1}, {effect_2} ja {effect_3}}other{{effect_1}, {effect_2} ja # muuta}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Rajoita mistä voit saada ilmoituksia"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Häiriöitä ei suodateta"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Salli kaikki ilmoitukset"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Ihmiset, sovellukset ja äänet voivat keskeyttää"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Suodatettujen ilmoitusten näyttövalinnat"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Kun Älä häiritse -tila on käytössä"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Ei ilmoitusääniä"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Se voi vastata viesteihin ja käyttää ilmoitusten toimintoja, esim. torkuttaa tai hylätä ilmoituksia ja vastata puheluihin."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Asetusten muuttaminen"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Se voi laittaa Älä häiritse ‑tilan päälle tai pois päältä ja muuttaa siihen liittyviä asetuksia."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Se voi ylläpitää ja aktivoida prioriteettitilat ja muuttaa niihin liittyviä asetuksia."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Jos <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ei saa käyttää ilmoituksia, myös Älä häiritse ‑tilan käyttö voidaan estää."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Jos <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ei saa pääsyä ilmoituksiin, myös pääsy prioriteettitiloihin voidaan laittaa pois päältä."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Laita pois päältä"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Peru"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Reaaliaikainen"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Älä häiritse -pääsy"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Salli Älä häiritse ‑tila"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Yksikään asennettu sovellus ei ole pyytänyt Älä häiritse -tilan käyttöoikeutta."</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Pääsy prioriteettitiloihin"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Salli pääsy prioriteettitiloihin"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Yksikään asennettu sovellus ei ole pyytänyt pääsyä prioriteettitiloihin"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Et ole sallinut ilmoituksia tästä sovelluksesta"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android estää pyynnöstäsi tähän luokkaan kuuluvien ilmoituksien näyttämisen tällä laitteella"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android estää pyynnöstäsi tähän ryhmään kuuluvien ilmoituksien näyttämisen tällä laitteella"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Eliminoi kaikki häiriöt, jotta voit nauttia hiljaisuudesta"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Personoi laitteen käyttökokemuksia ja asetuksia eri käyttäjille"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Minimoi häiriöt sallimalla ilmoitukset vain tärkeiltä ihmisiltä ja sovelluksilta"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Valitse tila, joka noudattaa säännöllistä aikataulua"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Pidä päivän tapahtumat synkronoituna laitteella"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Herää täynnä energiaa"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Aseta turvallisuus etusijalle ajaessa"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Keskity ja pääse sopivaan mielentilaan"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Kun haluat olla huomaavainen"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Ohjattu käyttö auttaa pysymään turvassa"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Keskity tarkasti"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Varoitus"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Sulje"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Lähetä palautetta tästä laitteesta"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Tämän täytyy olla käytössä, sillä ilmoitusten käyttöoikeus on myönnetty"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Perutaanko sovellukselta <xliff:g id="APP">%1$s</xliff:g> Älä häiritse -tilan käyttöoikeus?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Kaikki tämän sovelluksen luomat Älä häiritse -säännöt poistetaan."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Saako <xliff:g id="APP">%1$s</xliff:g> pääsyn prioriteettitiloihin?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Sovellus voi laittaa Älä häiritse ‑tilan päälle tai pois päältä, ylläpitää ja aktivoida prioriteettitiloja ja tehdä muutoksia niihin liittyviin asetuksiin."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Perutaanko pääsy prioriteettitiloihin (<xliff:g id="APP">%1$s</xliff:g>)?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Kaikki tämän sovelluksen luomat tilat poistetaan."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Älä optimoi"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimoi"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Tämän seurauksena akku voi kulua loppuun nopeammin. Sovelluksia ei enää estetä käyttämästä akkua taustalla."</string>
