--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"બદલો"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ડિવાઇસની વિગતો"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"કીબોર્ડ સેટિંગ"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"વધુ સેટિંગ"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ફર્મવેયર અપડેટ, તેના વિશે અને બીજું ઘણું બધું"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ડિવાઇસનું બ્લૂટૂથ ઍડ્રેસ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ડિવાઇસનું બ્લૂટૂથ ઍડ્રેસ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ડિવાઇસને ભૂલી જઈએ?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"પ્રાયોગિક. ઑડિયો ક્વૉલિટી બહેતર બનાવે છે."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"ડિવાઇસને ભૂલી જાઓ"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ઍપને ડિસ્કનેક્ટ કરો"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"વધુ સેટિંગ"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"મહત્તમ સંખ્યામાં કનેક્ટ થયેલા બ્લૂટૂથ ઑડિયો ડિવાઇસ"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"મહત્તમ સંખ્યામાં કનેક્ટ થયેલા બ્લૂટૂથ ઑડિયો ડિવાઇસ પસંદ કરો"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC શબ્દબહુલ વિક્રેતાનો ડિબગ લૉગ"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"મોબાઇલ ડેટા માટે <xliff:g id="CARRIER">%1$s</xliff:g>નો ઉપયોગ કરીએ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"તમે મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_0">%2$s</xliff:g>નો ઉપયોગ કરી રહ્યા છો. જો તમે બદલીને <xliff:g id="CARRIER1">%1$s</xliff:g> કરશો, તો મોબાઇલ ડેટા માટે <xliff:g id="CARRIER2_1">%2$s</xliff:g>નો ઉપયોગ નહીં થઈ શકે."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>નો ઉપયોગ કરો"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"પસંદગીનું સિમ અપડેટ કરીએ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"તમારા ઉપકરણમાં એકમાત્ર <xliff:g id="NEW_SIM">%1$s</xliff:g> સિમ છે. શું તમે મોબાઇલ ડેટા, કૉલ અને SMS સંદેશા માટે આ સિમનો ઉપયોગ કરવા માગો છો?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"મોબાઇલ ડેટા કવરેજ બહેતર કરીએ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"જ્યારે તેની ઉપલબ્ધતા બહેતર હોય, ત્યારે તમારા ડિવાઇસને મોબાઇલ ડેટા માટે <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> પર ઑટોમૅટિક રીતે સ્વિચ કરવાની મંજૂરી આપો."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"કદાચ તમારી સંસ્થાને કૉલ, મેસેજ અને નેટવર્ક ટ્રાફિક દેખાઈ શકે છે."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"વ્યક્તિગત ટચપૅડ નૅવિગેશનના સંકેતોને કસ્ટમાઇઝ કરો"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"રિવર્સ સ્ક્રોલિંગ"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"જ્યારે તમે નીચે સ્ક્રોલ કરો, ત્યારે કન્ટેન્ટ ઉપર ખસેડાય છે"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"સૌથી નીચે જમણી બાજુ ટૅપ કરો"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"વધુ વિકલ્પો માટે ટચપૅડ પર સૌથી નીચે જમણા ખૂણે ટૅપ કરો"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"સૌથી નીચે-રાઇટ ક્લિક કરો"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"વધુ વિકલ્પો માટે, ટચપૅડના સૌથી નીચેના જમણા ખૂણા પર ક્લિક કરો"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"પૉઇન્ટરની ઝડપ"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"પૉઇન્ટર ફીલ શૈલી"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"પૉઇન્ટર ફીલ શૈલીને કાળામાં બદલો"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ડાર્ક થીમ ચાલુ કરો"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"OS અને ઍપ સ્વિચ કરો, જેથી ઘેરા બૅકગ્રાઉન્ડ પર લાઇટ ટેક્સ્ટની પસંદગી કરી શકાય, જેનાથી આંખો માટે વધુ સરળતા રહી શકે છે અને અમુક ડિવાઇસ પર બૅટરીની નોંધપાત્ર બચતનો લાભ મળે છે"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ડિસ્પ્લેમાં કોઈ ફેરફાર નથી}=1{{effect_1}}=2{{effect_1} અને {effect_2}}=3{{effect_1}, {effect_2} અને {effect_3}}one{{effect_1}, {effect_2} અને વધુ #}other{{effect_1}, {effect_2} અને વધુ #}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"કઈ બાબત વિશે તમને નોટિફિકેશન મોકલી શકાશે, તે મર્યાદિત કરો"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"કોઈ વિક્ષેપને ફિલ્ટર કરેલા નથી"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"બધા નોટિફિકેશનની મંજૂરી આપો"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"લોકો, ઍપ અને સાઉન્ડ વિક્ષેપ કરી શકે છે"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ફિલ્ટર કરેલા નોટિફિકેશન માટેના વિકલ્પો ડિસ્પ્લે કરો"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"જ્યારે ખલેલ પાડશો નહીં મોડ ચાલુ હોય"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"નોટિફિકેશનમાં કોઈ સાઉન્ડ નથી"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"નોટિફિકેશન સ્નૂઝ કરવા કે છોડી દેવા અને કૉલનો જવાબ આપવા સહિત તે મેસેજનો જવાબ આપી શકે અને નોટિફિકેશનમાંના બટન પર ક્રિયા કરી શકે છે."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"સેટિંગ બદલો"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"તે ખલેલ પાડશો નહીં સુવિધા ચાલુ કે બંધ કરી શકે છે અને સંબંધિત સેટિંગ બદલી શકે છે."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"તે પ્રાધાન્યતા મોડ મેનેજ કરી શકે છે, તેને સક્રિય કરી શકે છે તેમજ સંબંધિત સેટિંગમાં ફેરફાર કરી શકે છે."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"જો તમે <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> માટે નોટિફિકેશન ઍક્સેસને બંધ કરો છો, તો ખલેલ પાડશો નહીં ઍક્સેસ પણ બંધ કરવામાં આવી શકે છે."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"જો તમે <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> માટે નોટિફિકેશનનો ઍક્સેસ બંધ કરી દો, તો પ્રાધાન્યતા મોડનો ઍક્સેસ પણ કદાચ બંધ થઈ જશે."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"બંધ કરો"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"રદ કરો"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"રિઅલ ટાઇમ"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ખલેલ પાડશો નહીંનો ઍક્સેસ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"ખલેલ પાડશો નહીંને મંજૂરી આપો"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"કોઇ ઇન્સ્ટોલ કરેલ એપ્લિકેશન્સએ ખલેલ પાડશો નહીં ઍક્સેસ કરવાની વિનંતી કરી નથી"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"પ્રાધાન્યતા મોડનો ઍક્સેસ"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"પ્રાધાન્યતા મોડના ઍક્સેસની મંજૂરી આપો"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ઇન્સ્ટૉલ કરેલી કોઈપણ ઍપ દ્વારા પ્રાધાન્યતા મોડના ઍક્સેસની વિનંતી કરવામાં આવી નથી"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"તમે આ ઍપમાંથી નોટિફિકેશનને મંજૂરી આપી નથી"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"તમારી વિનંતી મુજબ Android આ ઍપના નોટિફિકેશનની કૅટેગરીને આ ડિવાઇસ પર પ્રદર્શિત થતા બ્લૉક કરી રહ્યું છે"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"તમારી વિનંતી મુજબ Android આ ઍપના નોટિફિકેશનના ગ્રૂપને આ ડિવાઇસ પર પ્રદર્શિત થતા બ્લૉક કરી રહ્યું છે"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"શાંત વાતાવરણ માટે ધ્યાન ભટકાવનારા અવરોધો દૂર કરો"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"અલગ-અલગ વપરાશકર્તાઓ અનુસાર ડિવાઇસના અનુભવ અને સેટિંગ મનગમતા બનાવો"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"માત્ર મહત્ત્વના હોય એવા લોકો અને ઍપને જ તમારી સુધી પહોંચવાની મંજૂરી આપીને ધ્યાન ભટકાવનારા અવરોધો ઓછા કરો"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"નિયમિત શેડ્યૂલ અનુસરે એવો કોઈ મોડ સેટ કરો"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"દિવસભરની તમારી ઇવેન્ટને તમારા ડિવાઇસ સાથે સિંક કરેલી રાખો"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"જાગો ત્યારે 100% તાજગી અનુભવો"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"ડ્રાઇવ કરતી વખતે સૌપ્રથમ સલામતીને મહત્ત્વ આપો"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"પોતાના કામ પર ફોકસ કરો"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"એવી પળો માટે કે જ્યારે શિષ્ટાચાર મહત્ત્વ ધરાવતો હોય છે"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"પોતાને સલામત રાખવા માટે, સેવાનો માર્ગદર્શિત વપરાશ"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"તમારા ધ્યાનને નિયંત્રણમાં રાખો"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"ચેતવણી"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"બંધ કરો"</string>
     <string name="device_feedback" msgid="5351614458411688608">"આ ડિવાઇસ વિશે પ્રતિસાદ મોકલો"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ચાલુ રહેવું આવશ્યક છે કારણ કે નોટિફિકેશન ઍક્સેસ ચાલુ છે"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> માટે ખલેલ પહોંચાડશો નહિ ની એક્સેસ રદબાતલ કરીએ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"આ ઍપ્લિકેશન દ્વારા બનાવાયેલ તમામ ખલેલ પહોંચાડશો નહિ નિયમો દૂર કરવામાં આવશે."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"શું <xliff:g id="APP">%1$s</xliff:g> માટે પ્રાધાન્યતા મોડના ઍક્સેસની મંજૂરી આપીએ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"આ ઍપ \'ખલેલ પાડશો નહીં\' ચાલુ/બંધ કરી શકશે, પ્રાધાન્યતા મોડ મેનેજ કરી શકશે અને તેને સક્રિય કરી શકશે તેમજ સંબંધિત સેટિંગમાં ફેરફારો કરી શકશે."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"શું <xliff:g id="APP">%1$s</xliff:g> માટે પ્રાધાન્યતા મોડનો ઍક્સેસ રદબાતલ કરીએ?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"આ ઍપ દ્વારા બનાવવામાં આવેલા બધા મોડ કાઢી નાખવામાં આવશે."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ઓપ્ટિમાઇઝ કરશો નહીં"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ઑપ્ટિમાઇઝ કરો"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"તમારી બૅટરી વધુ ઝડપથી ખાલી થઈ શકે છે. ઍપ હવે બૅકગ્રાઉન્ડ બૅટરીનો ઉપયોગ કરવાથી પ્રતિબંધિત રહેશે નહીં."</string>
@@ -4173,7 +4159,7 @@
     <string name="disabled_by_policy_title" msgid="6852347040813204503">"ઑફિસની પૉલિસી દ્વારા બ્લૉક કરેલો છે"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"વૉલ્યૂમ બદલી શકાતું નથી"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"કૉલ કરી શકાતા નથી"</string>
-    <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS સંદેશા મોકલી શકાતા નથી"</string>
+    <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS મેસેજ મોકલી શકાતા નથી"</string>
     <string name="disabled_by_policy_title_camera" msgid="6616508876399613773">"કૅમેરાનો ઉપયોગ કરી શકાતો નથી"</string>
     <string name="disabled_by_policy_title_screen_capture" msgid="6085100101044105811">"સ્ક્રીનશૉટ લઈ શકાતા નથી"</string>
     <string name="disabled_by_policy_title_suspend_packages" msgid="4223983156635729793">"આ ઍપ ખોલી શકાતી નથી"</string>
@@ -5087,9 +5073,9 @@
     <string name="aware_summary_when_bedtime_on" msgid="2063856008597376344">"ઉપલબ્ધ નથી કારણ કે બેડટાઇમ મોડ ચાલુ છે"</string>
     <string name="reset_importance_completed" msgid="3595536767426097205">"નોટિફિકેશનનું મહત્ત્વ રીસેટ કરવાની પ્રક્રિયા પૂર્ણ થઈ."</string>
     <string name="apps_dashboard_title" msgid="3269953499954393706">"ઍપ"</string>
-    <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"કોઈ ડિવાઇસ તમારા સંદેશા ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
-    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"સંદેશા ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
-    <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા સંદેશા ઍક્સેસ કરવા માગે છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
+    <string name="bluetooth_message_access_notification_content" msgid="5111712860712823893">"કોઈ ડિવાઇસ તમારા મેસેજ ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
+    <string name="bluetooth_message_access_dialog_title" msgid="9009836130395061579">"મેસેજ ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
+    <string name="bluetooth_message_access_dialog_content" msgid="7186694737578788487">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા મેસેજ ઍક્સેસ કરવા માગે છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
     <string name="bluetooth_phonebook_access_notification_content" msgid="9175220052703433637">"કોઈ ડિવાઇસ તમારા સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવા માગે છે. વિગતો માટે ટૅપ કરો."</string>
     <string name="bluetooth_phonebook_access_dialog_title" msgid="7624607995928968721">"સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવાની મંજૂરી આપીએ?"</string>
     <string name="bluetooth_phonebook_access_dialog_content" msgid="959658135522249170">"કોઈ બ્લૂટૂથ ડિવાઇસ, <xliff:g id="DEVICE_NAME_0">%1$s</xliff:g>, તમારા સંપર્કો અને કૉલ લૉગ ઍક્સેસ કરવા માગે છે. આમાં ઇનકમિંગ અને આઉટગોઇંગ કૉલ વિશેનો ડેટા શામેલ છે.\n\nતમે પહેલાં ક્યારેય <xliff:g id="DEVICE_NAME_1">%2$s</xliff:g> સાથે કનેક્ટ થયા નથી."</string>
