--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -477,7 +477,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"मिटाएं"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"सेंसर को छुएं"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"अपनी उंगली सेंसर पर रखें और वाइब्रेशन महसूस होने पर हटा लें"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"अपनी उंगली को सेंसर पर तब तक दबाकर रखें, जब तक आपको वाइब्रेशन महसूस न हो"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"अपनी उंगली को सेंसर पर तब तक रखें, जब तक आपको वाइब्रेशन महसूस न हो"</string>
     <string name="security_settings_sfps_enroll_start_message" msgid="9054672627477685212">"बटन को दबाए बिना, अपनी उंगली को सेंसर पर तब तक रखें, जब तक आपको वाइब्रेशन महसूस न हो.\n\nहर बार अपनी उंगली को थोड़ा सा हिलाएं. ऐसा करके, आपके फ़िंगरप्रिंट को बेहतर तरीके से कैप्चर किया जा सकता है."</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"फ़िंगरप्रिंट सेंसर को दबाकर रखें"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"सेंसर से उंगली हटाकर, उसे दोबारा छुएं"</string>
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"बदलें"</string>
     <string name="device_details_title" msgid="1155622417516195481">"डिवाइस की जानकारी"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"कीबोर्ड की सेटिंग"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"अन्य सेटिंग"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"फ़र्मवेयर अपडेट, इसकी जानकारी, और अन्य सेटिंग"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"डिवाइस का ब्लूटूथ पता: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"डिवाइस के ब्लूटूथ का पता:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"डिवाइस को हटाना है?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"प्रयोग. इससे ऑडियो क्वालिटी बेहतर होगी."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"डिवाइस हटाएं"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ऐप्लिकेशन डिसकनेक्ट करें"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"अन्य सेटिंग"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ब्लूटूथ के ज़रिए ज़्यादा से ज़्यादा कितने ऑडियो डिवाइस जुड़ सकते हैं"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"यह चुनें कि ब्लूटूथ के ज़रिए ज़्यादा से ज़्यादा कितने ऑडियो डिवाइस जुड़ सकते हैं"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"एनएफ़सी वर्बोस वेंडर डीबग लॉग"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"मोबाइल डेटा के लिए <xliff:g id="CARRIER">%1$s</xliff:g> का इस्तेमाल करें?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"मोबाइल डेटा के लिए आप <xliff:g id="CARRIER2_0">%2$s</xliff:g> इस्तेमाल कर रहे हैं. अगर आप <xliff:g id="CARRIER1">%1$s</xliff:g> का इस्तेमाल करते हैं, तो <xliff:g id="CARRIER2_1">%2$s</xliff:g> को मोबाइल डेटा के लिए इस्तेमाल नहीं किया जाएगा."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> का इस्तेमाल करें"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"पसंदीदा सिम बदलना है?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"आपके डिवाइस में सिर्फ़ <xliff:g id="NEW_SIM">%1$s</xliff:g> सिम है. क्या आपको मोबाइल डेटा, कॉल, और मैसेज (एसएमएस) के लिए इस सिम का इस्तेमाल करना है?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"मोबाइल डेटा कवरेज बढ़ाना है?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"बेहतर नेटवर्क उपलब्ध होने पर, डिवाइस को मोबाइल डेटा के लिए <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> पर अपने-आप स्विच होने की अनुमति दें."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"कॉल, मैसेज, और नेटवर्क ट्रैफ़िक की जानकारी आपके संगठन को दिख सकती है."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"टचपैड पर नेविगेशन के लिए हाथ के जेस्चर पसंद के मुताबिक बनाएं"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"रिवर्स स्क्रोलिंग"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"नीचे की ओर स्क्रोल करने पर, कॉन्टेंट ऊपर की ओर जाता है"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"सबसे नीचे दाईं ओर टैप करें"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ज़्यादा विकल्पों के लिए टचपैड के सबसे नीचे दाएं कोने पर टैप करें"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"सबसे नीचे दाईं ओर क्लिक करें"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"टचपैड के सबसे नीचे दाएं कोने पर क्लिक करके अन्य विकल्प पाएं"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"पॉइंटर की स्पीड"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"पॉइंटर का फ़िल स्टाइल"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"पॉइंटर फ़िल स्टाइल, ब्लैक में बदलें"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"चालू है / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> और <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"स्पेशल ऑडियो की सुविधा को ब्लूटूथ डिवाइसों के लिए भी चालू किया जा सकता है."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"कनेक्ट किए गए डिवाइसों की सेटिंग"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"स्पेशल ऑडियो"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"बंद है"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"बंद है"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"बंद है"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{कोई शेड्यूल सेट नहीं है}=1{1 शेड्यूल सेट है}one{# शेड्यूल सेट है}other{# शेड्यूल सेट हैं}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"परेशान न करें"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"अहम मोड"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"इससे गहरे रंग वाली थीम चालू होती है"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"गहरे रंग के बैकग्राउंड पर हल्के रंग के टेक्स्ट को प्राथमिकता देने के लिए, ओएस और ऐप्लिकेशन पर स्विच करें. ऐसा करके, टेक्स्ट को देख पाना आसान हो जाता है. साथ ही, कुछ डिवाइसों पर बैटरी की काफ़ी बचत होती है"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{डिसप्ले में कोई बदलाव नहीं किया गया}=1{{effect_1}}=2{{effect_1} और {effect_2}}=3{{effect_1}, {effect_2}, और {effect_3}}one{{effect_1}, {effect_2}, और # अन्य}other{{effect_1}, {effect_2}, और # अन्य}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"तय करें कि आपको कौनसी सूचना मिले"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"किसी भी सूचना, साउंड वगैरह को रोका नहीं जा रहा है"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"सभी सूचनाओं को अनुमति दें"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"लोग, ऐप्लिकेशन, और आवाज़ें, प्राथमिकता मोड को बायपास कर सकती हैं"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"फ़िल्टर की गई सूचनाओं के लिए विकल्प"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'परेशान न करें\' मोड चालू होने पर"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"सूचनाएं आने पर कोई आवाज़ सुनाई न दे"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"यह ऐप्लिकेशन मैसेज के जवाब दे सकता है. साथ ही, सूचनाओं में दिखने वाले बटन से कार्रवाइयां भी कर सकता है, जैसे- सूचनाओं को स्नूज़ (थोड़ी देर के लिए बंद) या खारिज करना. यह फ़ोन कॉल के जवाब भी दे सकता है."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"सेटिंग में बदलाव करना"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"यह ऐप्लिकेशन \'परेशान न करें\' मोड को चालू या बंद कर सकता है और इससे जुड़ी सेटिंग में बदलाव कर सकता है."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"इससे प्राथमिकता मोड को मैनेज और चालू किया जा सकता है. साथ ही, इससे जुड़ी सेटिंग में बदलाव किया जा सकता है."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"अगर <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> के लिए सूचना का ऐक्सेस बंद किया जाता है, तो \'परेशान न करें\' सेवा का ऐक्सेस भी बंद हो सकता है."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> के लिए सूचना पाने की सुविधा का ऐक्सेस बंद करने पर, प्राथमिकता मोड का ऐक्सेस भी बंद हो सकता है."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"बंद करें"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"रद्द करें"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"रीयल-टाइम"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\'परेशान न करें\' को बायपास करने की अनुमति"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'परेशान न करें\' सुविधा को बायपास करने की अनुमति दें"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"इंस्टॉल किए गए किसी भी ऐप्लिकेशन ने, परेशान ना करें सुविधा के इस्तेमाल का अनुरोध नहीं किया है"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"प्राथमिकता मोड का ऐक्सेस"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"प्राथमिकता मोड को ऐक्सेस करने की अनुमति दें"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"इंस्टॉल किए गए किसी भी ऐप्लिकेशन ने, प्राथमिकता मोड के ऐक्सेस का अनुरोध नहीं किया है"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"आपने इस ऐप्लिकेशन को सूचनाएं भेजने की अनुमति नहीं दी है"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"आपके अनुरोध पर, Android इस कैटगरी की सूचनाओं को इस डिवाइस पर ब्लॉक कर रहा है"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"आपके अनुरोध पर, Android इस तरह की सूचनाओं को इस डिवाइस पर आने से रोक रहा है"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"शांत माहौल पाने के लिए, ध्यान भटकाने वाली सभी सूचनाओं वगैरह को बंद करें"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"अलग-अलग उपयोगकर्ताओं के हिसाब से, डिवाइस का अनुभव और सेटिंग तय करें"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"रुकावटों को कम करने के लिए, सिर्फ़ ज़रूरी लोगों और ऐप्लिकेशन को ही सूचना वगैरह भेजने की अनुमति दें"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"एक रेगुलर शेड्यूल के मुताबिक काम करने वाला कोई मोड सेट करें"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"अपने डिवाइस को, दिन भर के इवेंट के साथ सिंक करके रखें"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"ताज़गी के साथ दिन की शुरुआत करें"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"गाड़ी चलाते समय सबसे पहले सुरक्षा को अहमियत दें"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"अपने काम पर फ़ोकस बनाए रखें"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"उन पलों के लिए जब कर्टसी मायने रखती है"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"आपको सुरक्षित रखने के लिए, सेवा का इस्तेमाल करने से जुड़े निर्देश"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"अपना ध्यान बनाए रखें"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"चेतावनी"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"बंद करें"</string>
     <string name="device_feedback" msgid="5351614458411688608">"इस डिवाइस के बारे में सुझाव भेजें"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"इसे चालू रखें क्योंकि सूचना का ऐक्सेस चालू है"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> से, \'परेशान न करें\' सुविधा का ऐक्सेस वापस लेना है?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"इस ऐप्लिकेशन ने, \'परेशान न करें\' सुविधा के लिए जो भी नियम बनाए हैं उन्हें हटा दिया जाएगा."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"क्या आपको <xliff:g id="APP">%1$s</xliff:g> के लिए प्राथमिकता मोड का ऐक्सेस देना है?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"यह ऐप्लिकेशन इन सेटिंग को ऐक्सेस कर सकेगा: \'परेशान न करें\' मोड को चालू/बंद करना, प्राथमिकता मोड को मैनेज और चालू करना, और इससे जुड़ी सेटिंग में बदलाव करना."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"क्या आपको <xliff:g id="APP">%1$s</xliff:g> के लिए प्राथमिकता मोड का ऐक्सेस वापस लेना है?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"इस ऐप्लिकेशन के बनाए गए सभी मोड हटा दिए जाएंगे."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ऑप्‍टिमाइज़ ना करें"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ऑप्‍टिमाइज़ करें"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"इससे आपके डिवाइस की बैटरी तेज़ी से खर्च हो सकती है. यह सेटिंग चालू करने के बाद, ऐप्लिकेशन को बैकग्राउंड में बैटरी इस्तेमाल करने से नहीं रोका जाएगा."</string>
@@ -5439,7 +5421,7 @@
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"कोई पासवर्ड नहीं है"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"ज़्यादा जानें"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> पर यह ऑडियो स्ट्रीम नहीं चलाया जा सकता."</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"अभी सुना जा रहा है"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"अभी सुनी जा रही है"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"सुनना बंद करें"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"डिवाइस के साथ काम करने वाले हेडफ़ोन कनेक्ट करें"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"कोई डिवाइस कनेक्ट करें"</string>
