--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"ផ្លាស់ប្ដូរ"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ព័ត៌មានលម្អិត​អំពី​ឧបករណ៍"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ការកំណត់​ក្ដារ​ចុច"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ការកំណត់ច្រើនទៀត"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ការដំឡើងកំណែកម្មវិធី​បង្កប់ អំពី និង​ច្រើនទៀត"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"អាសយដ្ឋាន​ប៊្លូធូស​របស់ឧបករណ៍៖ <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"អាសយដ្ឋាន​ប៊្លូធូស​របស់ឧបករណ៍៖\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"បំភ្លេច​ឧបករណ៍?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"ពិសោធន៍។ កែលម្អគុណភាពសំឡេង។"</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"បំភ្លេច​ឧបករណ៍"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ផ្ដាច់​កម្មវិធី"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"ការកំណត់ច្រើនទៀត"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ចំនួនអតិបរមា​នៃ​ឧបករណ៍​សំឡេង​ដែលភ្ជាប់​ប៊្លូធូស​"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ជ្រើសរើស​ចំនួនអតិបរមា​នៃ​ឧបករណ៍​សំឡេង​ដែលភ្ជាប់​ប៊្លូធូស"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"កំណត់ហេតុជួសជុល​លម្អិតរបស់អ្នកផ្គត់ផ្គង់​អំពី NFC"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ប្រើ <xliff:g id="CARRIER">%1$s</xliff:g> ទិន្នន័យទូរសព្ទចល័ត?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"អ្នក​កំពុង​ប្រើប្រាស់ <xliff:g id="CARRIER2_0">%2$s</xliff:g> សម្រាប់​ទិន្នន័យ​ទូរសព្ទចល័ត។ ប្រសិនបើប្ដូរទៅ <xliff:g id="CARRIER1">%1$s</xliff:g> <xliff:g id="CARRIER2_1">%2$s</xliff:g> នឹងមិនត្រូវបានប្រើ​សម្រាប់ទិន្នន័យទូរសព្ទចល័ត​ទៀតទេ។"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"ប្រើ <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"ធ្វើបច្ចុប្បន្នភាពស៊ីមដែលពេញចិត្តឬ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> គឺជា​ស៊ីមតែមួយគត់ដែលមាននៅក្នុងឧបករណ៍​របស់អ្នក។ តើអ្នក​ចង់ប្រើ​ស៊ីមនេះដើម្បីប្រើទិន្ន័យចល័ត ហៅទូរសព្ទ និងផ្ញើសារ SMS ដែរទេ?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"កែលម្អការគ្របដណ្ដប់ទិន្នន័យទូរសព្ទចល័តឬ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"អនុញ្ញាតឱ្យឧបករណ៍​របស់អ្នកប្ដូរទៅ <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> ដោយស្វ័យប្រវត្តិ​សម្រាប់ទិន្នន័យទូរសព្ទចល័ត នៅពេលវាមានលទ្ធភាពផ្តល់ជូនប្រសើរជាងមុន។"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ការហៅទូរសព្ទ សារ និងចរាចរណ៍បណ្តាញអាចបង្ហាញឱ្យស្ថាប័នរបស់អ្នកឃើញ។"</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"ប្ដូរចលនារុករកផ្ទាំងប៉ះនីមួយៗតាមបំណង"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"ការរំកិលបញ្រ្ចាស"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"ខ្លឹមសារផ្លាស់ទី​ឡើងលើ នៅពេលអ្នករំកិល​ចុះក្រោម"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ការចុចខាងស្ដាំផ្នែកខាងក្រោម"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ចុចជ្រុងខាងស្ដាំផ្នែកខាងក្រោមនៃផ្ទាំងប៉ះសម្រាប់ជម្រើសបន្ថែម"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"ចុចខាងក្រោមផ្នែកខាងស្ដាំ"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"ចុចជ្រុងខាងស្ដាំផ្នែកខាងក្រោមនៃផ្ទាំងប៉ះសម្រាប់ជម្រើសបន្ថែម"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"ល្បឿន​ទស្សន៍ទ្រនិច"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"ស្តាយល៍បំពេញរបស់ព្រួញ"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"ប្ដូរស្តាយល៍បំពេញរបស់ព្រួញទៅខ្មៅ"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"បើក​ទម្រង់រចនាងងឹត"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ប្ដូរប្រព័ន្ធ​ប្រតិបត្តិការ និងកម្មវិធីទៅអក្សរពណ៌ស្រាលដែលចង់ប្រើនៅលើផ្ទៃខាងក្រោយងងឹត ដែលអាចមានភាពងាយស្រួលជាងមុនសម្រាប់ភ្នែក និងជួយសន្សំ​ថ្មបានច្រើននៅលើឧបករណ៍មួយចំនួន"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{មិនមានការផ្លាស់ប្ដូរចំពោះផ្ទាំងអេក្រង់ទេ}=1{{effect_1}}=2{{effect_1} និង {effect_2}}=3{{effect_1}, {effect_2} និង {effect_3}}other{{effect_1}, {effect_2} និង # ទៀត}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"ដាក់កំហិតលើអ្វីដែលអាចជូនដំណឹងដល់អ្នក"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"គ្មានការរំខានត្រូវបានត្រងទេ"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"អនុញ្ញាត​ការជូនដំណឹង​ទាំងអស់"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"មនុស្ស កម្មវិធី និងសំឡេងអាច​ផ្អាកបាន"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ជម្រើសបង្ហាញសម្រាប់ការ​ជូនដំណឹងដែលបានត្រង"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"នៅ​ពេល​បើក​មុខងារ​កុំ​រំខាន"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"គ្មានសំឡេង​ពីការជូន​ដំណឹង"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"វាអាចឆ្លើយតបសារ និងធ្វើសកម្មភាពលើប៊ូតុងនៅក្នុងការជូនដំណឹង រួមទាំងផ្អាក ឬច្រានចោលការជូនដំណឹង និងទទួល​ទូរសព្ទផងដែរ។"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ប្ដូរ​ការកំណត់"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"វាអាចបើក ឬបិទមុខងារកុំ​រំខាន និងប្ដូរការកំណត់​ដែលពាក់ព័ន្ធ។"</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"វាអាចគ្រប់គ្រង និងដំណើរការមុខងារអាទិភាព និងផ្លាស់ប្ដូរការកំណត់ដែលពាក់ព័ន្ធ។"</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ប្រសិនបើអ្នកបិទការចូលប្រើការជូនដំណឹង​សម្រាប់ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> នោះការចូលប្រើមុខងារ​កុំរំខានក៏អាចនឹងត្រូវបានបិទដែរ។"</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"ប្រសិនបើអ្នកបិទការចូលប្រើការជូនដំណឹងសម្រាប់ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> នោះការចូលប្រើមុខងារអាទិភាពក៏អាចបិទផងដែរ។"</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"បិទ"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"បោះបង់"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ក្នុងពេលជាក់​ស្ដែង"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ចូលដំណើរការមុខងារកុំរំខាន"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"អនុញ្ញាតមុខងារកុំរំខាន"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"គ្មានកម្មវិធីបានដំឡើងណាមួយបានស្នើការចូលដំណើរការមុខងារកុំរំខានទេ"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ការចូលប្រើមុខងារអាទិភាព"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"អនុញ្ញាតឱ្យចូលប្រើមុខងារអាទិភាព"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"គ្មានកម្មវិធីដែលបានដំឡើងណាបានស្នើសុំឱ្យចូលប្រើមុខងារអាទិភាពឡើយ"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"អ្នកមិនបានអនុញ្ញាត​ការជូនដំណឹង​ពីកម្មវិធីនេះទេ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ប្រភេទនៃការជូនដំណឹង​​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ក្រុមនៃ​ការជូនដំណឹង​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"បំបាត់គ្រប់កត្តារំខានដើម្បីទទួលបានកន្លែងស្ងប់ស្ងាត់"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"កំណត់បទពិសោធប្រើប្រាស់ និងការកំណត់ឧបករណ៍ឱ្យមានលក្ខណៈផ្ទាល់ខ្លួនសម្រាប់អ្នកប្រើប្រាស់"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"បន្ថយការរំខានឱ្យនៅតិចបំផុត ដោយអនុញ្ញាតឱ្យតែមនុស្ស និងកម្មវិធីសំខាន់ៗទាក់ទងទៅអ្នក"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"កំណត់មុខងារដែលគោរពតាមកាលវិភាគទៀងទាត់"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"រក្សាការធ្វើសកមកាលកម្មឧបករណ៍របស់អ្នកជាមួយព្រឹត្តិការណ៍ប្រចាំថ្ងៃរបស់អ្នក"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"ភ្ញាក់​ពី​គេងមានអារម្មណ៍ល្អបំផុត"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"គិតពី​សុវត្ថិភាព​ជា​ចម្បងពេល​ធ្វើដំណើរ​តាមផ្លូវ"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"ផ្ចង់អារម្មណ៍ឱ្យបានល្អ"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"សម្រាប់ពេលដែលការគោរពត្រូវបានពិចារណា"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"ការប្រើប្រាស់ដោយមានការណែនាំក្នុងការជួយអ្នកឱ្យទទួលបានការមើលថែល្អ"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"គ្រប់គ្រងការយកចិត្តទុកដាក់របស់អ្នក"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"ការព្រមាន"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"បិទ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ផ្ដល់​មតិ​កែលម្អ​អំពី​ឧបករណ៍​នេះ"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ត្រូវបើកជានិច្ច ដោយសារតែការចូលដំណើរការការជូនដំណឹងបានបើក"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"ដកសិទ្ធិចូលប្រើមុខងារកុំរំខានសម្រាប់ <xliff:g id="APP">%1$s</xliff:g> ឬ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"វិធានទាំងអស់របស់មុខងារកុំរំខានដែលបានបង្កើតដោយកម្មវិធីនេះនឹងត្រូវដកចេញ។"</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"អនុញ្ញាតឱ្យចូលប្រើមុខងារអាទិភាពសម្រាប់ <xliff:g id="APP">%1$s</xliff:g> ឬ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"កម្មវិធីនឹងអាចបើក/បិទមុខងារ កុំ​រំខាន គ្រប់គ្រង និងដំណើរការមុខងារអាទិភាព និងធ្វើការផ្លាស់ប្ដូរការកំណត់ដែលពាក់ព័ន្ធ។"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"ដក​សិទ្ធិ​ចូល​ប្រើមុខងារអាទិភាពសម្រាប់ <xliff:g id="APP">%1$s</xliff:g> ឬ?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"មុខងារទាំងអស់ដែលបង្កើតឡើងដោយកម្មវិធីនេះនឹងត្រូវបានដកចេញ។"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"កុំបង្កើនប្រសិទ្ធភាព"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"បង្កើនប្រសិទ្ធភាព"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"អាចស៊ីថ្មលឿនជាងមុន។ កម្មវិធី​នឹងមិន​មានការ​​​ដាក់​កំហិតចំពោះ​ការ​ប្រើប្រាស់​ថ្ម​ផ្ទៃ​ខាងក្រោយ​ទៀតទេ។"</string>
@@ -5360,7 +5346,7 @@
     <string name="sim_category_converted_sim" msgid="8575548015816988908">"បានបំប្លែងទៅជា eSIM។ ដកចេញ និងលុបចោល។"</string>
     <string name="sync_across_devices_title" msgid="3447757705383089345">"ធ្វើសមកាលកម្មលើឧបករណ៍នានា"</string>
     <string name="device_diagnostics_title" msgid="2914523189695727897">"ការវិនិច្ឆយឧបករណ៍"</string>
-    <string name="audio_sharing_title" msgid="4144157137502923821">"ការចែករំលែកសំឡេង"</string>
+    <string name="audio_sharing_title" msgid="4144157137502923821">"ការស្ដាប់សំឡេងរួមគ្នា"</string>
     <string name="audio_sharing_switch_title" msgid="7052827328670825701">"ចែករំលែកសំឡេង"</string>
     <string name="calls_and_alarms_device_title" msgid="6993559028175454198">"ការហៅទូរសព្ទ និងម៉ោងរោទ៍"</string>
     <string name="audio_sharing_description" msgid="1660255584523640628">"ឱ្យអ្នកផ្សេងស្ដាប់មេឌៀរបស់អ្នកព្រមគ្នាជាមួយអ្នក។ អ្នកស្ដាប់ត្រូវមានកាស LE Audio ផ្ទាល់ខ្លួនរបស់ពួកគេ។"</string>
