--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Өзгөртүү"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Түзмөктүн чоо-жайы"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Баскычтоп параметрлери"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Дагы параметрлер"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Орнотулган программаларды жаңыртуу, кеңири маалымат ж.б."</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Түзмөктүн Bluetooth дареги: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Түзмөктүн Bluetooth дареги:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Түзмөк унутулсунбу?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Сынамык. Аудионун сапатын жакшыртат."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Түзмөк унутулсун"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Колдонмону ажыратуу"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Дагы параметрлер"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Туташып турган Bluetooth аудио түзмөктөрүнүн уруксат берилген эң жогорку саны"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Туташып турган Bluetooth аудио түзмөктөрүнүн эң жогорку санын тандоо"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Мүчүлүштүктөрдү оңдоо үчүн NFC\'деги кепти дааналатууну жайгаштыруу"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"<xliff:g id="CARRIER">%1$s</xliff:g> Интернети колдонулсунбу?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Мобилдик Интернет үчүн <xliff:g id="CARRIER2_0">%2$s</xliff:g> операторун колдонуп жатасыз. Эгер <xliff:g id="CARRIER1">%1$s</xliff:g> операторуна которулсаңыз, <xliff:g id="CARRIER2_1">%2$s</xliff:g> мобилдик Интернет үчүн колдонулбай калат."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> операторун колдонуу"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Негизги SIM картаны өзгөртөсүзбү?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> түзмөгүңүздөгү жалгыз SIM карта. Аны чалуулар, SMS билдирүүлөрүн жөнөтүү жана мобилдик Интернет үчүн колдоносузбу?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Жеткиликтүү тармакка которуласызбы?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Негизги тармак жеткиликсиз болгондо, телефонуңузга <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> байланыш операторунун мобилдик Интернетине автоматтык түрдө которулууга уруксат бериңиз."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Чалуулар, билдирүүлөр жана тармак трафиги уюмуңузга көрүнүшү мүмкүн."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Сенсордук тактада жеке өтүү жаңсоолорун ыңгайлаштырыңыз"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Тескери сыдыруу"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Ылдый сыдырганыңызда экрандагы нерсе өйдө жылат"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Ылдыйкы оң бурчту таптаңыз"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Дагы параметрлерди көрүү үчүн сенсордук тактанын ылдыйкы оң бурчун таптаңыз"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Ылдыйкы оң бурчун чыкылдатуу"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Дагы параметрлерди көрүү үчүн сенсордук тактанын ылдыйкы оң бурчун басыңыз"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Көрсөткүчтүн ылдамдыгы"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Көрсөткүчтү толтуруу стили"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Толтуруу стилин карага өзгөртүү"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Күйүк/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> жана <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Мейкиндиктүү үндү Bluetooth түзмөктөрү үчүн да күйгүзө аласыз."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Туташкан түзмөктөрдүн параметрлери"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Мейкиндиктүү үн"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Өчүк"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Өчүк"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Өчүк"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Жок}=1{1 график коюлду}other{# график коюлду}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Тынчымды алба"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Маанилүүлүк режимдери"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"караңгы теманы иштетүү"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Текстти күңүрт фондо ачык түстө көрүү үчүн OS менен колдонмолорду которуңуз. Бул көзүңүзгө доо кетирбей, айрым түзмөктөрдө батареяны олуттуу үнөмдөөгө жардам бериши мүмкүн"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Көрүнүш өзгөргөн жок}=1{{effect_1}}=2{{effect_1} жана {effect_2}}=3{{effect_1}, {effect_2} жана {effect_3}}other{{effect_1}, {effect_2} жана дагы #}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Билдирмелерди чектөө"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Билдирмелер чыпкаланган жок"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Бардык билдирмелерге уруксат берүү"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Байланыштар, колдонмолор жана добуштар үзгүлтүккө учурашы мүмкүн"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Чыпкаланган билдирмелерди көрсөтүү параметрлери"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\"Тынчымды алба\" режими күйүп турганда"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Билдирмелердин үнү чыкпайт"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Чалууларга жана билдирүүлөргө жооп берип, билдирмелерди убактылуу өчүрүп же жаап, алардагы баскычтарды баса алат."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Параметрлерди өзгөртөт"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"\"Тынчымды алба\" режимин күйгүзүп же өчүрүп, анын параметрлерин өзгөртө алат."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Ал Маанилүү режимдерди тескеп жана иштетип, тиешелүү параметрлерди өзгөртө алат."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Эгер <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> колдонмосунун билдирмелерин алуудан баш тартсаңыз, \"Тынчымды алба\" режиминин параметрлерин өзгөртө албай каласыз."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Эгер <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> үчүн билдирмелерди колдонуу мүмкүндүгүн өчүрсөңүз, Маанилүү режимдерди колдонуу мүмкүндүгү да өчүрүлүшү мүмкүн."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Өчүрүү"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Жок"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Анык убакыт"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\"Тынчымды алба\" функциясы"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\"Тынчымды алба\" режимине уруксат берүү"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Орнотулган колдонмолор үчүн \"Тынчымды алба\" функциясы талап кылынбайт"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Маанилүү режимдерди колдонуу мүмкүндүгү"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Маанилүү режимдерди колдонууга мүмкүндүк берүү"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Бир да орнотулган колдонмо Маанилүү режимдерди колдонууга уруксат сураган жок"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Бул колдонмонун билдирмелерине тыюу салдыңыз"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Тынч чөйрө үчүн бардык алаксыткан нерселерди жоюңуз"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Ар кандай колдонуучулар үчүн түзмөктү колдонууну жана параметрлерди жекелештирүү"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Маанилүү адамдарга жана колдонмолорго гана сиз менен байланышууга уруксат берип, үзгүлтүккө учуроо деңгээлин азайтыңыз"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Кадимки графикке ылайык режимди тууралаңыз"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Түзмөгүңүздү күндөгү иш-чаралар менен шайкештештириңиз"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Өзүңүздү 100% сезип ойгонуңуз"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Жолдо баратканда коопсуздукту биринчи орунга койуңуз"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Көңүл топтоңуз"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Сыпайылык маанилүү болгон учурлар үчүн"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Ишенимдүү колдо болушуңуз үчүн жетекетеме"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Жакшылап көңүл буруңуз"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Эскертүү"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Жабуу"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Түзмөк тууралуу пикир билдирүү"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Билдирмелерге уруксат берилгендиктен, күйүп турушу керек"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> колдонмосуна \"Тынчымды алба\" режимин тыюу саласызбы?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Бул колдонмо түзгөн \"Тынчымды алба\" эрежелеринин баары өчөт."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> колдонмосуна Маанилүү режимдерди колдонууга уруксат берилсинби?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Бул колдонмо \"Тынчымды алба\" режимин күйгүзүп/өчүрүп, Маанилүү режимдерди тескеп жана иштетип, тийиштүү параметрлерди өзгөртө алат."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> үчүн Маанилүү режимдерди колдонуу мүмкүндүгү артка кайтарылсынбы?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Бул колдонмо түзгөн бардык режимдер өчүрүлөт."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Үнөмдөлбөсүн"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Үнөмдөө"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Батареяңыз тез эле отуруп калышы мүмкүн. Мындан ары колдонмонун батареяны фондо сарптоосу чектелбейт."</string>
@@ -5400,7 +5382,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Жаңы түзмөк кошуу"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR кодун көрсөтүү"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Чогуу угуп жатасыңар"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Угуп жаткан кишилер медиа файлыңызды уга алышат. Алар чалууларыңызды угушпайт."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Башка колдонуучулар медиа файлыңызды угуп, чалууларыңызды угушпайт."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Чогуу угууну токтотуу"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Параметрлер"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Ажыратылуучу түзмөктү тандаңыз"</string>
