--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"ປ່ຽນ"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ລາຍລະອຽດອຸປະກອນ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ການຕັ້ງຄ່າແປ້ນພິມ"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ການອັບເດດເຟີມແວ, ກ່ຽວກັບ ແລະ ອື່ນໆ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ທີ່ຢູ່ Bluetooth ຂອງອຸປະກອນ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ລືມອຸປະກອນບໍ?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"ທົດລອງ. ປັບປຸງຄຸນນະພາບສຽງ."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"ລືມອຸປະກອນ"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ຕັດການເຊື່ອມຕໍ່ແອັບ"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ອຸປະກອນສຽງ Bluetooth ທີ່ເຊື່ອມຕໍ່ສູງສຸດ"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ເລືອກຈຳນວນອຸປະກອນສຽງ Bluetooth ທີ່ເຊື່ອມຕໍ່ສູງສຸດ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"ບັນທຶກດີບັກເວັນເດີແບບລະອຽດຂອງ NFC"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ໃຊ້ <xliff:g id="CARRIER">%1$s</xliff:g> ສຳລັບອິນເຕີເນັດມືຖືບໍ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"ທ່ານກຳລັງໃຊ້ <xliff:g id="CARRIER2_0">%2$s</xliff:g> ສຳລັບອິນເຕີເນັດມືຖື. ຫາກທ່ານສະຫຼັບໄປໃຊ້ <xliff:g id="CARRIER1">%1$s</xliff:g>, <xliff:g id="CARRIER2_1">%2$s</xliff:g> ຈະບໍ່ສາມາດຖືກໃຊ້ເຊື່ອມຕໍ່ອິນເຕີເນັດໄດ້ອີກຕໍ່ໄປ."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"ໃຊ້ <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"ອັບເດດຊິມທີ່ຕ້ອງການບໍ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ເປັນຊິມດຽວໃນອຸປະກອນຂອງທ່ານ. ທ່ານຕ້ອງການໃຊ້ຊິມນີ້ສຳລັບໃຊ້ອິນເຕີເນັດມືຖື, ການໂທ ແລະ ສົ່ງຂໍ້ຄວາມ SMS ບໍ່?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"ປັບປຸງຄວາມຄອບຄຸມຂອງອິນເຕີເນັດມືຖືບໍ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"ອະນຸຍາດໃຫ້ອຸປະກອນຂອງທ່ານສະຫຼັບໄປຫາ <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> ເພື່ອໃຊ້ອິນເຕີເນັດມືຖືໂດຍອັດຕະໂນມັດເມື່ອສະຖານະຂອງມັນດີກວ່າ."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ການໂທ, ຂໍ້ຄວາມ ແລະ ທຣາບຟິກເຄືອຂ່າຍອາດສະແດງໃຫ້ອົງກອນຂອງທ່ານເຫັນໄດ້."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"ປັບແຕ່ງທ່າທາງການນຳທາງແຕ່ລະແບບຂອງແຜ່ນສຳຜັດ"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"ການເລື່ອນຍ້ອນກັບ"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"ເນື້ອຫາຈະເລື່ອນຂຶ້ນເມື່ອທ່ານເລື່ອນລົງ"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ແຕະລຸ່ມສຸດເບື້ອງຂວາ"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ແຕະຢູ່ແຈຂວາລຸ່ມສຸດຂອງແຜ່ນສຳຜັດເພື່ອເບິ່ງຕົວເລືອກເພີ່ມເຕີມ"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"ຄລິກຂວາລຸ່ມສຸດ"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"ຄລິກຢູ່ແຈຂວາລຸ່ມສຸດຂອງແຜ່ນສຳຜັດເພື່ອເບິ່ງຕົວເລືອກເພີ່ມເຕີມ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"ຄວາມໄວຂອງຕົວຊີ້"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"ຮູບແບບການຕື່ມຕົວຊີ້"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"ປ່ຽນຮູບແບບການຕື່ມຕົວຊີ້ເປັນສີດຳ"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ເປີດການນຳໃຊ້ຮູບແບບສີສັນມືດ"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ສະຫຼັບລະບົບປະຕິບັດການ ແລະ ແອັບເພື່ອໃຊ້ຂໍ້ຄວາມສີອ່ອນເທິງພື້ນຫຼັງສີເຂັ້ມ, ເຊິ່ງອາດສະບາຍຕາຫຼາຍຂຶ້ນ ແລະ ຊ່ວຍປະຢັດແບັດເຕີຣີໄດ້ຫຼາຍໃນອຸປະກອນບາງປະເພດ"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ບໍ່ມີການປ່ຽນແປງການສະແດງຜົນ}=1{{effect_1}}=2{{effect_1} ແລະ {effect_2}}=3{{effect_1}, {effect_2} ແລະ {effect_3}}other{{effect_1}, {effect_2} ແລະ ອີກ # ລາຍການ}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"ຈຳກັດການແຈ້ງເຕືອນທີ່ທ່ານຈະໄດ້ຮັບ"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"ບໍ່ໄດ້ກັ່ນຕອງການຂັດຈັງຫວະ"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"ອະນຸຍາດການແຈ້ງເຕືອນທັງໝົດ"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"ໃຫ້ຜູ້ຄົນ, ແອັບ ແລະ ສຽງລົບກວນໄດ້"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ຕົວເລືອກການສະແດງຜົນສຳລັບການແຈ້ງເຕືອນທີ່ຖືກກັ່ນຕອງ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"ເມື່ອເປີດໃຊ້ໂໝດຫ້າມລົບກວນ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"ບໍ່ມີສຽງຈາກການແຈ້ງເຕືອນ"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ມັນສາມາດຕອບກັບຫາຂໍ້ຄວາມ ແລະ ໃຊ້ຄຳສັ່ງຢູ່ປຸ່ມຕ່າງໆໃນການແຈ້ງເຕືອນໄດ້, ຮວມທັງການເລື່ອນໄປກ່ອນ ຫຼື ການປິດການແຈ້ງເຕືອນ ແລະ ການຮັບສາຍໂທລະສັບ."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ປ່ຽນການຕັ້ງຄ່າ"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ມັນສາມາດເປີດ ຫຼື ປິດໂໝດຫ້າມລົບກວນ ແລະ ປ່ຽນການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ໂດຍສາມາດຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດຄວາມສຳຄັນ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ຫາກທ່ານປິດການເຂົ້າເຖິງການແຈ້ງເຕືອນສຳລັບ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ການເຂົ້າເຖິງ ຫ້າມລົບກວນ ອາດຖືກປິດໄປນຳ."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"ຫາກທ່ານປິດການເຂົ້າເຖິງການແຈ້ງເຕືອນສຳລັບ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, ການເຂົ້າເຖິງໂໝດຄວາມສຳຄັນອາດຈະຖືກປິດໄປນຳ."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ປິດໄວ້"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"ຍົກເລີກ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ແບບສົດໆ"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"​ການເຂົ້າເຖິງ ຫ້າມ​ລົບ​ກວນ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"ອະນຸຍາດໂໝດຫ້າມລົບກວນ"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ບໍ່​ມີ​ການ​ຂໍ​ແອັບ​ທີ່​ຕິດ​ຕັ້ງ​ໄວ້ ​ຫາ​ຫ້າມ​ລົບ​ກວນການ​ເຂົ້າ"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ສິດເຂົ້າເຖິງໂໝດຄວາມສຳຄັນ"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"ອະນຸຍາດໃຫ້ໂໝດຄວາມສຳຄັນເຂົ້າເຖິງ"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ບໍ່ມີແອັບໃດທີ່ຕິດຕັ້ງໄວ້ຂໍເຂົ້າເຖິງໂໝດຄວາມສຳຄັນ"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ທ່ານບໍ່ໄດ້ອະນຸຍາດການແຈ້ງເຕືອນຈາກແອັບນີ້"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ຕາມຄຳຂໍຂອງທ່ານ, Android ຈະບລັອກໝວດໝູ່ການແຈ້ງເຕືອນນີ້ບໍ່ໃຫ້ປາກົດຢູ່ອຸປະກອນນີ້"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ຕາມຄຳຂໍຂອງທ່ານ, Android ຈະບລັອກກຸ່ມການແຈ້ງເຕືອນນີ້ບໍ່ໃຫ້ປາກົດຢູ່ອຸປະກອນນີ້"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"ກຳຈັດສິ່ງລົບກວນທັງໝົດເພື່ອສະພາບແວດລ້ອມທີ່ງຽບສະຫງົບ"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"ປັບແຕ່ງປະສົບການໃນການໃຊ້ອຸປະກອນ ແລະ ການຕັ້ງຄ່າສຳລັບຜູ້ໃຊ້ທີ່ແຕກຕ່າງກັນໃຫ້ເປັນແບບສ່ວນຕົວ"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"ຫຼຸດການລົບກວນໂດຍການອະນຸຍາດສະເພາະບຸກຄົນ ແລະ ແອັບທີ່ສຳຄັນເທົ່ານັ້ນໃນການຕິດຕໍ່ຫາທ່ານ"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"ຕັ້ງຄ່າໂໝດທີ່ເປັນໄປຕາມກຳນົດເວລາປົກກະຕິ"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"ຊິ້ງອຸປະກອນຂອງທ່ານກັບນັດໝາຍປະຈຳວັນຂອງທ່ານ"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"ຕື່ນຂຶ້ນມາດ້ວຍຄວາມຮູ້ສຶກດີຄືເຕັມ 100%"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"ຄວາມປອດໄພຕ້ອງມາກ່ອນສະເໝີເມື່ອຢູ່ເທິງຖະໜົນ"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"ເພີ່ມສະມາທິເພື່ອຕັ້ງໃຈກັບສິ່ງທີ່ຕ້ອງເຮັດ"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"ສຳລັບເວລາທີ່ມາລະຍາດເປັນເລື່ອງສຳຄັນ"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"ການນຳໃຊ້ແບບມີຄຳແນະນຳເພື່ອຊ່ວຍທ່ານໄດ້ຮັບການເບິ່ງແຍງຢ່າງດີ"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"ຄວບຄຸມຄວາມສົນໃຈຂອງທ່ານ"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"ຄໍາເຕືອນ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ປິດ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ສົ່ງ​ຄຳ​ຕິ​ຊົມ​ກ່ຽວ​ກັບ​ອຸ​ປະ​ກອນ​ນີ້"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ຕ້ອງເປີດໄວ້ເນື່ອງຈາກການເຂົ້າເຖິງການແຈ້ງເຕືອນຖືກເປີດໃຊ້"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"ຖອດຖອນ​ການ​ເຂົ້າ​ເຖິງຫ້າມ​ລົບ​ກວນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ທຸກກົດ​ລະບຽບຫ້າມ​ລົບ​ກວນທີ່​ສ້າງ​ຂຶ້ນ​ໂດຍ​ແອັບນີ້​ຈະ​ຖືກລຶບ​ອອກ."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"ອະນຸຍາດໃຫ້ເຂົ້າເຖິງໂໝດຄວາມສຳຄັນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ແອັບຈະສາມາດເປີດ/ປິດໂໝດຫ້າມລົບກວນ, ຈັດການ ແລະ ເປີດນຳໃຊ້ໂໝດຄວາມສຳຄັນ, ຮວມທັງປ່ຽນແປງການຕັ້ງຄ່າທີ່ກ່ຽວຂ້ອງໄດ້."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"ຖອດຖອນສິດເຂົ້າເຖິງໂໝດຄວາມສຳຄັນສຳລັບ <xliff:g id="APP">%1$s</xliff:g> ບໍ?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ລະບົບຈະລຶບໂໝດທັງໝົດທີ່ແອັບນີ້ສ້າງອອກ."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ບໍ່ປັບໃຫ້ເໝາະສົມ"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ປັບໃຫ້ເໝາະສົມ"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"ອາດໃຊ້ແບັດເຕີຣີຂອງທ່ານໝົດໄວຂຶ້ນ. ຈະບໍ່ມີການຈຳກັດການນຳໃຊ້ແບັດເຕີຣີໃນພື້ນຫຼັງອີກຕໍ່ໄປ."</string>
