--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"മാറ്റുക"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ഉപകരണ വിശദാംശങ്ങൾ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"കീബോർഡ് ക്രമീകരണം"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"കൂടുതൽ ക്രമീകരണം"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ഫേംവെയർ അപ്‌ഡേറ്റുകൾ, ആമുഖം എന്നിവയും മറ്റും"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ഉപകരണത്തിന്റെ Bluetooth വിലാസം: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ഉപകരണത്തിന്റെ Bluetooth വിലാസം:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ഉപകരണം മറക്കണോ?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"പരീക്ഷണം. ഓഡിയോ മെച്ചപ്പെടുത്തുന്നു."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"ഉപകരണം മറക്കുക"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ആപ്പ് വിച്‌ഛേദിക്കുക"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"കൂടുതൽ ക്രമീകരണം"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"കണക്റ്റ് ചെയ്‌ത പരമാവധി Bluetooth ഓഡിയോ ഉപകരണങ്ങൾ"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"കണക്റ്റ് ചെയ്‌ത പരമാവധി Bluetooth ഓഡിയോ ഉപകരണങ്ങളുടെ എണ്ണം തിരഞ്ഞെടുക്കുക"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC വെർബോസ് വെണ്ടർ ഡീബഗ് ലോഗ്"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"മൊബൈൽ ഡാറ്റയ്ക്ക് <xliff:g id="CARRIER">%1$s</xliff:g> വേണോ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"നിങ്ങൾ മൊബൈൽ ഡാറ്റയ്ക്ക് <xliff:g id="CARRIER2_0">%2$s</xliff:g> ഉപയോഗിക്കുന്നു. നിങ്ങൾ <xliff:g id="CARRIER1">%1$s</xliff:g> എന്നതിലേക്ക് മാറുകയാണെങ്കിൽ മൊബൈൽ ഡാറ്റ ലഭിക്കാൻ <xliff:g id="CARRIER2_1">%2$s</xliff:g> എന്നത് ഇനിമുതൽ ഉപയോഗിക്കാനാവില്ല."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ഉപയോഗിക്കുക"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"തിരഞ്ഞെടുത്ത സിം അപ്ഡേറ്റുചെയ്യണോ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"നിങ്ങളുടെ ഉപകരണത്തിൽ ഉള്ള ഒരേയൊരു സിം <xliff:g id="NEW_SIM">%1$s</xliff:g> ആണ്. മൊബൈൽ ഡാറ്റ, കോളുകൾ, SMS സന്ദേശങ്ങൾ എന്നിവയ്ക്ക് ഈ സിം ഉപയോഗിക്കാൻ ആഗ്രഹിക്കുന്നുണ്ടോ?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"മൊബൈൽ ഡാറ്റ മെച്ചപ്പെടുത്തണോ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> SIM-ൽ മെച്ചപ്പെട്ട നെറ്റ്‍വര്‍ക്ക് ഉള്ളപ്പോൾ മൊബൈൽ ഡാറ്റയ്ക്കായി അതിലേക്ക് സ്വയമേവ മാറാൻ നിങ്ങളുടെ ഉപകരണത്തെ അനുവദിക്കുക."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"കോളുകളും സന്ദേശങ്ങളും നെറ്റ്‍വര്‍ക്ക് ട്രാഫിക്കും നിങ്ങളുടെ സ്ഥാപനത്തിന് ദൃശ്യമായേക്കാം."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"വ്യക്തിഗത ടച്ച്പാഡ് നാവിഗേഷൻ ജെസ്ച്ചറുകൾ ഇഷ്ടാനുസൃതമാക്കുക"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"വിപരീതക്രമത്തിൽ സ്‌ക്രോൾ ചെയ്യൽ"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"താഴേക്ക് സ്‌ക്രോൾ ചെയ്യുമ്പോൾ ഉള്ളടക്കം മുകളിലേക്ക് നീങ്ങും"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"താഴെ വലതുഭാഗം ടാപ്പ് ചെയ്യൂ"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"കൂടുതൽ ഓപ്‌ഷനുകൾക്ക് ടച്ച്പാഡിന് താഴെ വലതുമൂല ടാപ്പ് ചെയ്യൂ"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"താഴെ വലതുവശത്ത് ക്ലിക്ക് ചെയ്യൽ"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"കൂടുതൽ ഓപ്ഷനുകൾക്ക് ടച്ച്പാഡിന് താഴെ വലതുമൂല ക്ലിക്ക് ചെയ്യൂ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"പോയിന്റർ വേഗത"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"പോയിന്റർ ഫിൽ സ്റ്റൈൽ"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"പോയിന്റർ ഫിൽ സ്റ്റൈൽ കറുപ്പാക്കൂ"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ഡാർക്ക് തീം പ്രവർത്തനക്ഷമമാക്കുക"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ഇരുണ്ട പശ്ചാത്തലത്തിലെ ലൈറ്റ് ടെക്‌സ്റ്റിന് മുൻഗണന നൽകാൻ OS-ഉം ആപ്പുകളും തമ്മിൽ മാറുക, ഇത് കണ്ണുകൾക്ക് അനുയോജ്യമായേക്കാം, ചില ഉപകരണങ്ങളിൽ കാര്യമായ തോതിൽ ബാറ്ററി ലാഭിക്കാനും സഹായിച്ചേക്കാം"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ഡിസ്പ്ലേ മാറ്റങ്ങളൊന്നുമില്ല}=1{{effect_1}}=2{{effect_1}, {effect_2} എന്നിവ}=3{{effect_1}, {effect_2}, {effect_3} എന്നിവ}other{{effect_1}, {effect_2} എന്നിവയും മറ്റ് # എണ്ണവും}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"നിങ്ങൾക്ക് ഏതൊക്കെ അറിയിപ്പുകൾ ലഭിക്കണമെന്നത് പരിമിതപ്പെടുത്തുക"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"തടസ്സങ്ങളൊന്നും ഫിൽട്ടർ ചെയ്തിട്ടില്ല"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"എല്ലാ അറിയിപ്പുകളും അനുവദിക്കുക"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"ആളുകൾക്കും ആപ്പുകൾക്കും ശബ്‌ദങ്ങൾക്കും തടസ്സപ്പെടുത്താൻ കഴിയും"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ഫിൽട്ടർ ചെയ്ത അറിയിപ്പുകൾക്കുള്ള ഡിസ്പ്ലേ ഓപ്ഷനുകൾ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"ശല്യപ്പെടുത്തരുത് എന്നത് ഓണാക്കുമ്പോൾ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"അറിയിപ്പുകൾക്ക് ശബ്‍ദം വേണ്ട"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"സ്‌നൂസ് ചെയ്യൽ അല്ലെങ്കിൽ അറിയിപ്പുകൾ ഡിസ്‌മിസ് ചെയ്യൽ എന്നതും കോളുകൾക്ക് മറുപടി നൽകലും ഉൾപ്പെടെയുള്ള, അറിയിപ്പുകളിലെ ബട്ടണുകളിൽ നടപടിയെടുക്കാനും സന്ദേശങ്ങൾക്ക് മറുപടി നൽകാനും ഇതിന് കഴിയും."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ക്രമീകരണം മാറ്റാം"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ഇതിന് \'ശല്യപ്പെടുത്തരുത്\' ഓൺ അല്ലെങ്കിൽ ഓഫ് ആക്കാനും ബന്ധപ്പെട്ട ക്രമീകരണം മാറ്റാനും കഴിയും."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ഇതിന് മുൻഗണനയുള്ള മോഡുകൾ മാനേജ് ചെയ്യാനും സജീവമാക്കാനും അനുബന്ധ ക്രമീകരണം മാറ്റാനും കഴിയും."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> എന്നതിനായുള്ള അറിയിപ്പ് ആക്സസ് നിങ്ങൾ ഓഫാക്കുന്നുവെങ്കിൽ, \'ശല്യപ്പെടുത്തരുത്\' ആക്സസും ഓഫാക്കിയേക്കാം."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> എന്നതിനായുള്ള അറിയിപ്പ് ആക്സസ് നിങ്ങൾ ഓഫാക്കുന്നുവെങ്കിൽ, മുൻഗണനാ മോഡുകളിലേക്കുള്ള ആക്സസും ഓഫാക്കിയേക്കാം."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ഓഫാക്കുക"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"റദ്ദാക്കുക"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"തത്സമയം"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\'ശല്യപ്പെടുത്തരുത്\' ആക്‌സസ്"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'ശല്യപ്പെടുത്തരുത്\' അനുവദിക്കുക"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ഇൻസ്റ്റാളുചെയ്‌തവയൊന്നും \'ശല്യപ്പെടുത്തരുത്\' മോഡിൽ പ്രവേശിക്കാൻ അഭ്യർത്ഥിച്ചിട്ടില്ല"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"മുൻഗണനയുള്ള മോഡുകളിലേക്കുള്ള ആക്സസ്"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"മുൻഗണനാ മോഡുകളിലേക്കുള്ള ആക്‌സസ് അനുവദിക്കുക"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ഇൻസ്റ്റാൾ ചെയ്ത ആപ്പുകളൊന്നും മുൻഗണനാ മോഡുകളിലേക്കുള്ള ആക്‌സസ് അഭ്യർത്ഥിച്ചിട്ടില്ല"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ഈ ആപ്പിൽ നിന്നുള്ള അറിയിപ്പുകൾ നിങ്ങൾ അനുവദിച്ചിട്ടില്ല"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"നിങ്ങളുടെ അഭ്യർത്ഥനപ്രകാരം, ഈ ഉപകരണത്തിൽ ഈ വിഭാഗത്തിൽപ്പെട്ട അറിയിപ്പുകൾ ദൃശ്യമാകുന്നത് Android ബ്ലോക്ക് ചെയ്യുന്നു"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"നിങ്ങളുടെ അഭ്യർത്ഥനപ്രകാരം, ഈ ഗ്രൂപ്പിൽപ്പെട്ട അറിയിപ്പുകൾ ഈ ഉപകരണത്തിൽ ദൃശ്യമാകുന്നത് Android ബ്ലോക്ക് ചെയ്യുന്നു"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"ശാന്തമായ ഒരു അന്തരീക്ഷത്തിനായി എല്ലാ തടസ്സങ്ങളും ഇല്ലാതാക്കുക"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"വ്യത്യസ്ത ഉപയോക്താക്കൾക്കായി ഉപകരണ അനുഭവങ്ങളും ക്രമീകരണവും വ്യക്തിപരമാക്കുക"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"പ്രധാനപ്പെട്ട ആളുകളേയും ആപ്പുകളേയും മാത്രം നിങ്ങളുമായി ബന്ധപ്പെടാൻ അനുവദിക്കുന്നതിലൂടെ തടസ്സങ്ങൾ കുറയ്ക്കുക"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"പതിവ് ഷെഡ്യൂൾ പിന്തുടരുന്ന ഒരു മോഡ് സജ്ജീകരിക്കുക"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"നിങ്ങളുടെ ഉപകരണത്തെ നിങ്ങളുടെ ദിവസത്തെ ഇവന്റുകളുമായി സമന്വയിപ്പിച്ച് നിലനിർത്തുക"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"നല്ല ഊർജ്ജസ്വലതയോടെ ഉണരുക"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"റോഡിലായിരിക്കുമ്പോൾ, സുരക്ഷയ്ക്ക് മുൻഗണന നൽകുക"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"നിങ്ങളുടെ ജോലിയിൽ ശ്രദ്ധ കേന്ദ്രീകരിക്കുക"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"മര്യാദ വിലമതിക്കപ്പെടുന്ന സന്ദർഭങ്ങൾ"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"നിങ്ങളെ സുരക്ഷിതമായി നിലനിർത്താൻ സഹായിക്കുന്ന നിർദ്ദേശങ്ങൾ പാലിക്കുക"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"നിങ്ങളുടെ ശ്രദ്ധയുടെ നിയന്ത്രണം ഏറ്റെടുക്കുക"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"മുന്നറിയിപ്പ്"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"അടയ്‌ക്കുക"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ഇതേക്കുറിച്ചുള്ള ഫീഡ്‌ബാക്ക് അയയ്‌ക്കൂ"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"അറിയിപ്പ് ആക്സസ്സ് ഓണായിരിക്കുന്നതിനാൽ ഇതും ഓണായി തുടരണം"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"\'ശല്യപ്പെടുത്തരുത്\' എന്നതിലേക്ക് <xliff:g id="APP">%1$s</xliff:g> ആപ്പിനുള്ള ആക്സസ് പിൻവലിക്കണോ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ഈ ആപ്പ് സൃഷ്ടിച്ചിട്ടുള്ള എല്ലാ \'ശല്യപ്പെടുത്തരുത്\' നിയമങ്ങളും നീക്കംചെയ്യപ്പെടും."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> എന്നതിന് മുൻഗണനാ മോഡുകളിലേക്കുള്ള ആക്‌സസ് അനുവദിക്കണോ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"\'ശല്യപ്പെടുത്തരുത്\' ഓൺ/ഓഫ് ആക്കാനും മുൻഗണനാ മോഡുകൾ മാനേജ് ചെയ്ത് സജീവമാക്കാനും ബന്ധപ്പെട്ട ക്രമീകരണത്തിൽ മാറ്റങ്ങൾ വരുത്താനും ആപ്പിന് കഴിയും."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> എന്നതിനുള്ള മുൻഗണനാ മോഡുകളിലേക്കുള്ള ആക്സസ് റദ്ദാക്കണോ?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ഈ ആപ്പ് സൃഷ്ടിച്ച എല്ലാ മോഡുകളും നീക്കം ചെയ്യും."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ഓപ്റ്റിമൈസ് ചെയ്യരുത്"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"നിങ്ങളുടെ ബാറ്ററി ചാർജ് കൂടുതൽ വേഗത്തിൽ തീർന്നേക്കാം. പശ്ചാത്തലത്തിൽ ബാറ്ററി ഉപയോഗിക്കുന്നതിൽ നിന്ന് ആപ്പ് ഇനി നിയന്ത്രിക്കപ്പെടില്ല."</string>
