--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"ပြောင်းရန်"</string>
     <string name="device_details_title" msgid="1155622417516195481">"စက်အသေးစိတ်များ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"ကီးဘုတ် ဆက်တင်များ"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"နောက်ထပ်ဆက်တင်များ"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ဖားမ်ဝဲအပ်ဒိတ်များ၊ အကြောင်းနှင့် အခြား"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"စက်ပစ္စည်း၏ ဘလူးတုသ်လိပ်စာ- <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"စက်၏ ဘလူးတုသ်လိပ်စာ-\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"စက်ပစ္စည်းကို မေ့ပစ်လိုက်မလား။"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"စမ်းသပ်ဆဲ။ အသံအရည်အသွေး ပိုကောင်းသည်။"</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"စက်ပစ္စည်းကို မေ့ပစ်ရန်"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"အက်ပ် ချိတ်ဆက်မှုဖြုတ်ရန်"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"နောက်ထပ်ဆက်တင်များ"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ဘလူးတုသ်က အများဆုံးချိတ်ဆက်ထားနိုင်သည့် စက်အရေအတွက်"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ချိတ်ဆက်ထားနိုင်သည့် ဘလူးတုသ် ချိတ်ဆက်နိုင်သည့် အများဆုံးအရေအတွက်ကို ရွေးပါ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC အကျယ်ရှင်းလင်းချက်ပံ့ပိုးသူ အမှားရှာပြင်ခြင်း မှတ်တမ်း"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"မိုဘိုင်းဒေတာအတွက် <xliff:g id="CARRIER">%1$s</xliff:g> သုံးမလား။"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"မိုဘိုင်းဒေတာအတွက် <xliff:g id="CARRIER2_0">%2$s</xliff:g> အသုံးပြုနေသည်။ <xliff:g id="CARRIER1">%1$s</xliff:g> သို့ပြောင်းလျှင် မိုဘိုင်းဒေတာအတွက် <xliff:g id="CARRIER2_1">%2$s</xliff:g> ကို အသုံးပြုတော့မည် မဟုတ်ပါ။"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> သုံးရန်"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"ဦးစားပေးဆင်းမ်ကတ် သတ်မှတ်မလား။"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> သည် သင့်ဖုန်းထဲရှိ တစ်ခုတည်းသော ဆင်းမ်ကဒ်ဖြစ်သည်။ ဤဆင်းမ်ကဒ်ကို မိုဘိုင်းဒေတာ အသုံးပြုရန်၊ ဖုန်းခေါ်ရန်နှင့် SMS မက်ဆေ့ဂျ်ပို့ရန် အတွက် အသုံးပြုလိုပါသလား။"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"မိုဘိုင်းဒေတာ ပိုကောင်းအောင် လုပ်မလား။"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> ကွန်ရက်ပိုကောင်းသည့်အခါ ၎င်း၏မိုဘိုင်းဒေတာသို့ သင့်စက်ကို အော်တိုပြောင်းခွင့်ပြုပါ။"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"ခေါ်ဆိုမှုများ၊ မက်ဆေ့ဂျ်များနှင့် ကွန်ရက်ဒေတာ စီးဆင်းမှုကို သင်၏အဖွဲ့အစည်းက မြင်နိုင်သည်။"</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"တစ်ဦးသုံး တာ့ချ်ပက်လမ်းညွှန် လက်ဟန်များကို စိတ်ကြိုက်လုပ်ပါ"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"ပြောင်းပြန်လှိမ့်ခြင်း"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"အောက်သို့လှိမ့်လျှင် အကြောင်းအရာ အပေါ်သို့တက်လာမည်"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"အောက်ခြေညာကို တို့ခြင်း"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"နောက်ထပ်ရွေးစရာအတွက် တာ့ချ်ပက်၏ အောက်ခြေညာထောင့်ကို တို့ပါ"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"အောက်ခြေညာဘက်ခလုတ်ကို နှိပ်ခြင်း"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"နောက်ထပ်ရွေးစရာအတွက် တာ့ချ်ပက်၏ အောက်ခြေညာထောင့်ကို နှိပ်နိုင်သည်"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"မြားရွေ့နှုန်း"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"မြား ဖြည့်စွက်ပုံစံ"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"မြား ဖြည့်စွက်ပုံစံကို အမည်း ပြောင်းရန်"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"အမှောင်နောက်ခံ သုံးရန်"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"အမှောင်နောက်ခံတွင် လင်းသောစာသားကို ပိုမိုနှစ်သက်ပါက OS နှင့် အက်ပ်များကို ပြောင်းနိုင်သည်။ ၎င်းသည် မျက်လုံးအားစိုက်ရမှု ပိုမိုသက်သာစေနိုင်ပြီး စက်ပစ္စည်းအချို့တွင် ဘက်ထရီ သိသာစွာ ချွေတာနိုင်သည်"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ဖန်သားပြင်တွင် အပြောင်းအလဲ မရှိပါ}=1{{effect_1}}=2{{effect_1} နှင့် {effect_2}}=3{{effect_1}၊ {effect_2} နှင့် {effect_3}}other{{effect_1}၊ {effect_2} နှင့် နောက်ထပ် # ခု}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"သင့်အား အကြောင်းကြားနိုင်သည်များကို ကန့်သတ်ရန်"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"အနှောင့်အယှက်များကို စစ်ထုတ်ထားခြင်း မရှိပါ"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"အကြောင်းကြားချက်အားလုံးကို ခွင့်ပြုရန်"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"လူ၊ အက်ပ်နှင့် အသံများ ကြားဖြတ်နိုင်သည်"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"စစ်ထုတ်ထားသော အကြောင်းကြားချက်များအတွက် ပြသမှု ရွေးစရာများ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'မနှောင့်ယှက်ရ\' ဖွင့်ထားသည့်အခါ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"အကြောင်းကြားချက် အသံမဖွင့်ရန်"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"၎င်းသည် မက်ဆေ့ဂျ်များကို စာပြန်နိုင်ပြီး နှိုးစက်သံ ဆိုင်းငံ့ခြင်း (သို့) ပယ်ခြင်းနှင့် ဖုန်းလက်ခံခြင်းများအပါအဝင် အကြောင်းကြားချက်များရှိ ခလုတ်များကို နှိပ်နိုင်သည်။"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ဆက်တင်များ ပြောင်းခြင်း"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"၎င်းသည် ‘မနှောင့်ယှက်ရ’ ဝန်ဆောင်မှုကို ဖွင့်နိုင် (သို့) ပိတ်နိုင်ပြီး သက်ဆိုင်ရာ ဆက်တင်များကို ပြောင်းနိုင်သည်။"</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"‘ဦးစားပေးမုဒ်များ’ ကို စီမံနိုင်၊ စသုံးနိုင်ပြီး သက်ဆိုင်ရာ ဆက်တင်များကို ပြောင်းနိုင်သည်။"</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> အတွက် အကြောင်းကြားချက် အသုံးပြုခွင့်ကို ပိတ်လိုက်လျှင် \'မနှောင့်ယှက်ရ\' ကို အသုံးပြုခွင့်လည်း ပိတ်သွားပါမည်။"</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"<xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> အတွက် အကြောင်းကြားချက် သုံးခွင့်ကို ပိတ်ပါက ‘ဦးစားပေးမုဒ်များ’ သုံးခွင့်ကိုလည်း ပိတ်နိုင်သည်။"</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ပိတ်ရန်"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"မလုပ်တော့"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"အချိန်နှင့် တစ်ပြေးညီ"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"\'မနှောင့်ယှက်ရ\' သုံးခွင့်"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'မနှောင့်ယှက်ရ\' ကိုခွင့်ပြုရန်"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ထည့်သွင်းထားသည့် အက်ပ်များသည် \'မနှောက်ယှက်ရ\' သုံးခွင့် တောင်းဆိုမထားပါ"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"‘ဦးစားပေးမုဒ်များ’ သုံးခြင်း"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"‘ဦးစားပေးမုဒ်များ’ သုံးခွင့်ပြုရန်"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ထည့်သွင်းထားသည့် မည်သည့်အက်ပ်တစ်ခုမျှ ‘ဦးစားပေးမုဒ်များ’ သုံးခွင့် တောင်းဆိုမထားပါ"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ဤအက်ပ်မှ အကြောင်းကြားချက်များကို သင်ခွင့်ပြုမထားပါ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အမျိုးအစားများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အုပ်စုများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"တိတ်ဆိတ်သောပတ်ဝန်းကျင်အတွက် အာရုံပျံ့စရာအားလုံးကို ဖယ်ရှားပါ"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"မတူညီသော အသုံးပြုသူများအတွက် စက်ပစ္စည်းအသုံးပြုမှုနှင့် ဆက်တင်များကို ပုဂ္ဂိုလ်ရေးသီးသန့်လုပ်ပါ"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"အရေးကြီး ပုဂ္ဂိုလ်နှင့်အက်ပ်များကိုသာ သင့်ထံဆက်သွယ်ခွင့်ပြုခြင်းဖြင့် အနှောင့်အယှက်များ လျှော့ချပါ"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"ပုံမှန်အချိန်ဇယားအတိုင်း လုပ်ဆောင်သည့်မုဒ် သတ်မှတ်ပါ"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"သင့်စက်ပစ္စည်းကို တစ်နေ့တာအစီအစဉ်များနှင့် စင့်ခ်လုပ်ထားပါ"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"အားအင်အပြည့်ဖြင့် နိုးထပါ"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"လမ်းပေါ်တွင် လုံခြုံရေးကို ဦးစားပေးပါ"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"အကောင်းဆုံးစွမ်းဆောင်ရန် သေချာအာရုံစိုက်ပါ"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"ယဉ်ကျေးမှု အရေးပါသည့် အခိုက်အတန့်များအတွက်"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"သင့်အား ကောင်းစွာပံ့ပိုးပေးနိုင်ရန် လမ်းညွှန်ထားသော အသုံးပြုမှု"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"သင့်အာရုံစိုက်မှုကို ထိန်းချုပ်ပါ"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"သတိပေးချက်"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ပိတ်ရန်"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ဤကိရိယာအတွက် အကြံပြုချက် ပို့ရန်"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"အကြောင်းကြားချက် အသုံးပြုခွင့်ကိုဖွင့်ထားသောကြောင့် ဆက်လက်ဖွင့်ထားရပါမည်"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> အတွက် ‘မနှောင့်ယှက်ရ’ သုံးခွင့်ကို ပြန်ရုပ်သိမ်းမလား။"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ဤအက်ပ်က သတ်မှတ်ခဲ့သော \'မနှောင့်ယှက်ရ’ စည်းမျဉ်းအားလုံးကို ဖယ်ရှားပါမည်။"</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> အတွက် ‘ဦးစားပေးမုဒ်များ’ ကို သုံးခွင့်ပြုမလား။"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"အက်ပ်သည် ‘မနှောင့်ယှက်ရ’ ကို ဖွင့်/ပိတ် နိုင်ကာ ‘ဦးစားပေးမုဒ်များ’ ကို စီမံနိုင်၊ စသုံးနိုင်ပြီး သက်ဆိုင်ရာဆက်တင်များကို အပြောင်းအလဲများ ပြုလုပ်နိုင်ပါမည်။"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> အတွက် ‘ဦးစားပေးမုဒ်များ’ သုံးခွင့်ကို ရုပ်သိမ်းမလား။"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ဤအက်ပ်က ပြုလုပ်ထားသည့် မုဒ်အားလုံးကို ဖယ်ရှားမည်။"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"သင့်မြတ်အောင် မလုပ်ပါနှင့်"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"သင့်မြတ်အောင် လုပ်ကိုင်ရန်"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"သင့်ဘတ်ထရီကို ပိုမိုလျှင်မြန်စွာ ကုန်စေပါသည်။ အက်ပ်က နောက်ခံတွင် ဘက်ထရီအသုံးပြုနေခြင်းကို ကန့်သတ်တော့မည်မဟုတ်ပါ။"</string>
