--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ଡିଭାଇସର ବିବରଣୀ"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"କୀବୋର୍ଡ ସେଟିଂସ"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"ଅଧିକ ସେଟିଂସ"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ଫାର୍ମୱେର ଅପଡେଟ, ଏହା ବିଷୟରେ ଏବଂ ଆହୁରି ଅନେକ କିଛି"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ଡିଭାଇସ୍‌ର ବ୍ଲୁଟୁଥ ଠିକଣା ହେଉଛି: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ଡିଭାଇସର ବ୍ଲୁଟୁଥ ଠିକଣା:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ଡିଭାଇସଟି ଭୁଲିଯିବେ?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"ପରୀକ୍ଷାମୂଳକ। ଅଡିଓ ଗୁଣବତ୍ତାକୁ ଉନ୍ନତ କରେ।"</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"ଡିଭାଇସ୍‌କୁ ଭୁଲିଯାଆନ୍ତୁ"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"ଆପକୁ ବିଚ୍ଛିନ୍ନ କରନ୍ତୁ"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"ଅଧିକ ସେଟିଂସ"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ସର୍ବାଧିକ କନେକ୍ଟ ହୋଇଥିବା ବ୍ଲୁଟୁଥ ଅଡିଓ ଡିଭାଇସଗୁଡ଼ିକ"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ସଂଯୁକ୍ତ ବ୍ଲୁଟୂଥ୍‍‌ ଅଡିଓ ଡିଭାଇସ୍‌ଗୁଡ଼ିକର ସର୍ବାଧିକ ସଂଖ୍ୟା ବାଛନ୍ତୁ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ଭର୍ବୋସ ଭେଣ୍ଡର ଡିବଗ ଲଗ"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"ମୋବାଇଲ୍ ଡାଟା ପାଇଁ <xliff:g id="CARRIER">%1$s</xliff:g> ବ୍ୟବହାର କରିବେ?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"ମୋବାଇଲ୍ ଡାଟା ପାଇଁ ଆପଣ <xliff:g id="CARRIER2_0">%2$s</xliff:g> ବ୍ୟବହାର କରୁଛନ୍ତି। ଯଦି ଆପଣ <xliff:g id="CARRIER1">%1$s</xliff:g>କୁ ସ୍ବିଚ୍ କରୁଛନ୍ତି, ତେବେ ମୋବାଇଲ୍ ଡାଟା ପାଇଁ ଆଉ <xliff:g id="CARRIER2_1">%2$s</xliff:g> ବ୍ୟବହୃତ ହେବ ନାହିଁ।"</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g> ବ୍ୟବହାର କରନ୍ତୁ"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"ପସନ୍ଦର SIMକୁ ଅପଡେଟ କରିବେ?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ହେଉଛି ଆପଣଙ୍କ ଡିଭାଇସ୍‌ରେ ଥିବା ଏକମାତ୍ର SIM। ମୋବାଇଲ୍‌ ଡାଟା, କଲ୍‌ ଓ SMS ପାଇଁ ଏହାକୁ ହିଁ ବ୍ୟବହାର କରିବେ?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"ମୋବାଇଲ ଡାଟା କଭରେଜ ଉନ୍ନତ କରିବେ?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>ର ଉନ୍ନତ ଉପଲବ୍ଧତା ରହିଲେ, ମୋବାଇଲ ଡାଟା ପାଇଁ ସ୍ୱତଃ ଏହି ନେଟୱାର୍କକୁ ସୁଇଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଡିଭାଇସକୁ ଅନୁମତି ଦିଅନ୍ତୁ।"</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"କଲ, ମେସେଜ ଏବଂ ନେଟୱାର୍କ ଟ୍ରାଫିକ ଆପଣଙ୍କ ସଂସ୍ଥାକୁ ଦେଖାଯାଇପାରେ।"</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"ସ୍ୱତନ୍ତ୍ର ଟଚପେଡ ନାଭିଗେସନ ଜେଶ୍ଚରଗୁଡ଼ିକୁ କଷ୍ଟମାଇଜ କରନ୍ତୁ"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"ରିଭର୍ସ ସ୍କ୍ରୋଲିଂ"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"ଆପଣ ତଳକୁ ସ୍କ୍ରୋଲ କଲା ବେଳେ ବିଷୟବସ୍ତୁ ଉପରକୁ ମୁଭ ହୁଏ"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ନିମ୍ନ-ଡାହାଣ କୋଣରେ ଟାପ କରନ୍ତୁ"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ଅଧିକ ବିକଳ୍ପ ପାଇଁ ଟଚପେଡର ନିମ୍ନ ଡାହାଣ କୋଣରେ ଟାପ କରନ୍ତୁ"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"ନିମ୍ନରେ ଡାହାଣପଟେ କ୍ଲିକ କରନ୍ତୁ"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"ଅଧିକ ବିକଳ୍ପ ପାଇଁ ଟଚପେଡର ନିମ୍ନ ଡାହାଣ କୋଣରେ କ୍ଲିକ କରନ୍ତୁ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"ପଏଣ୍ଟରର ସ୍ପିଡ"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"ପଏଣ୍ଟର ଫିଲ ଷ୍ଟାଇଲ"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"ପଏଣ୍ଟର ଫିଲ ଷ୍ଟାଇଲକୁ କଳାରେ ବଦଳାନ୍ତୁ"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"ଚାଲୁ ଅଛି / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> ଏବଂ <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"ଆପଣ ବ୍ଲୁଟୁଥ ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ମଧ୍ୟ ସ୍ପେସିଆଲ ଅଡିଓକୁ ଚାଲୁ କରିପାରିବେ।"</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"କନେକ୍ଟ ହୋଇଥିବା ଡିଭାଇସଗୁଡ଼ିକର ସେଟିଂସ"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"ସ୍ପାସିଅଲ ଅଡିଓ"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"ବନ୍ଦ ଅଛି"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"ବନ୍ଦ ଅଛି"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"ବନ୍ଦ ଅଛି"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{କିଛି ନାହିଁ}=1{1ଟି ସିଡୁଲ୍ ସେଟ୍ ହୋଇଛି}other{#ଟି ସିଡୁଲ୍ ସେଟ୍ ହୋଇଛି}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ପ୍ରାଥମିକତା ମୋଡ"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"ଡାର୍କ ଥିମକୁ ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"ଆଖି ପାଇଁ ଆରାମଦାୟକ ଏବଂ କିଛି ଡିଭାଇସରେ ଉଲ୍ଲେଖନୀୟ ବେଟେରୀ ସେଭ କରୁଥିବା ଡାର୍କ ବେକଗ୍ରାଉଣ୍ଡରେ ଲାଇଟ ଟେକ୍ସଟ ପସନ୍ଦ କରିବାକୁ OS ଏବଂ ଆପ୍ସ ସୁଇଚ କରନ୍ତୁ"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{ଡିସପ୍ଲେରେ କୌଣସି ପରିବର୍ତ୍ତନ ନାହିଁ}=1{{effect_1}}=2{{effect_1} ଏବଂ {effect_2}}=3{{effect_1}, {effect_2} ଏବଂ {effect_3}}other{{effect_1}, {effect_2} ଏବଂ # ଅଧିକ}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"ଆପଣଙ୍କୁ କ\'ଣ ସୂଚିତ କରାଯାଇପାରିବ ତାହା ସୀମିତ କରନ୍ତୁ"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"କୌଣସି ବାଧା ଫିଲ୍ଟର ହୋଇନାହିଁ"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"ସମସ୍ତ ବିଜ୍ଞପ୍ତିକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"ଲୋକ, ଆପ୍ସ ଏବଂ ସାଉଣ୍ଦ ବାଧା ସୃଷ୍ଟି କରିପାରିବ"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ଫିଲ୍ଟର କରାଯାଇଥିବା ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକ ପାଇଁ ଡିସପ୍ଲେ ବିକଳ୍ପ"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\' ଚାଲୁ ଥିବା ସମୟରେ"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"ବିଜ୍ଞପ୍ତି ଆସିଲେ କୌଣସି ସାଉଣ୍ଡ ନାହିଁ"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ଏହା ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ସ୍ନୁଜ କିମ୍ବା ଖାରଜ କରିବା ଏବଂ କଲର ଉତ୍ତର ଦେବା ସହ ମେସେଜର ପ୍ରତ୍ୟୁତ୍ତର ଦେଇପାରିବ ଏବଂ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକରେ ଥିବା ବଟନଗୁଡ଼ିକ ଉପରେ ପଦକ୍ଷେପ ନେଇପାରିବ।"</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"ସେଟିଂସ ପରିବର୍ତ୍ତନ କରିବା"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ଏହା \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"କୁ ଚାଲୁ କିମ୍ବା ବନ୍ଦ କରିପାରିବ ଏବଂ ସମ୍ବନ୍ଧିତ ସେଟିଂସକୁ ପରିବର୍ତ୍ତନ କରିପାରିବ।"</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ଏହା ପ୍ରାଥମିକତା ମୋଡକୁ ପରିଚାଳନା ଓ ସକ୍ରିୟ କରିପାରିବ ଏବଂ ସମ୍ବନ୍ଧିତ ସେଟିସକୁ ପରିବର୍ତ୍ତନ କରିପାରିବ।"</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"ଯଦି ଆପଣ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ପାଇଁ ବିଜ୍ଞପ୍ତି ଆକ୍ସେସକୁ ବନ୍ଦ କରୁଛନ୍ତି, ତେବେ \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"ର ଆକ୍ସେସ ମଧ୍ୟ ବନ୍ଦ ହୋଇଯାଇପାରେ।"</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"ଯଦି ଆପଣ <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> ପାଇଁ ବିଜ୍ଞପ୍ତି ଆକ୍ସେସକୁ ବନ୍ଦ କରନ୍ତି, ତେବେ ପ୍ରାଥମିକତା ମୋଡର ଆକ୍ସେସକୁ ମଧ୍ୟ ବନ୍ଦ କରାଯାଇପାରେ।"</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"ରିଅଲ-ଟାଇମ"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ ଆକ୍ସେସକୁ ଚାଲୁ କରନ୍ତୁ"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"କୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ବ୍ୟସ୍ତ କରନ୍ତୁ ନାହିଁ ଆକ୍ସେସ୍‌ କୌଣସି ସଂସ୍ଥାପିତ ଆପ୍‌ଗୁଡ଼ିକ ଅନୁରୋଧ କରିନାହାଁନ୍ତି"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ପ୍ରାଥମିକତା ମୋଡର ଆକ୍ସେସ"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"ପ୍ରାଥମିକତା ମୋଡର ଆକ୍ସେସକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ଇନଷ୍ଟଲ କରାଯାଇଥିବା କୌଣସି ଆପ୍ସ ପ୍ରାଥମିକତା ମୋଡର ଆକ୍ସେସ ପାଇଁ ଅନୁରୋଧ କରିନାହିଁ"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"ଆପଣ ଏହି ଆପରୁ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ଅନୁମତି ଦେଇନାହାଁନ୍ତି"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ଆପଣଙ୍କ ଅନୁରୋଧରେ, ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକର ଏହି ବର୍ଗକୁ ଏହି ଡିଭାଇସରେ ଦେଖାଯିବାରେ Android ବ୍ଲକ କରୁଛି"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ଆପଣଙ୍କ ଅନୁରୋଧରେ, Android, ବିଜ୍ଞପ୍ତିଗୁଡିର ଏହି ଗୋଷ୍ଠୀକୁ ଏହି ଡିଭାଇସରେ ଦେଖାଦେବାରେ ଅବରୋଧ କରୁଛି"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"ଏକ ଶାନ୍ତ ପରିବେଶ ପାଇଁ ସମସ୍ତ ବିଭ୍ରାନ୍ତିକୁ ଦୂର କରନ୍ତୁ"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"ବିଭିନ୍ନ ୟୁଜରଙ୍କ ପାଇଁ ଡିଭାଇସ ଅନୁଭୂତି ଏବଂ ସେଟିଂସକୁ ପର୍ସନାଲାଇଜ କରନ୍ତୁ"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"କେବଳ ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ଲୋକ ଏବଂ ଆପ୍ସକୁ ଆପଣଙ୍କ ସହ ଯୋଗାଯୋଗ କରିବାକୁ ଅନୁମତି ଦେଇ ବାଧାକୁ କମ କରନ୍ତୁ"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"ଏକ ନିୟମିତ ସିଡୁଲକୁ ଫଲୋ କରୁଥିବା ଏକ ମୋଡ ସେଟ କରନ୍ତୁ"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"ଆପଣଙ୍କ ଡିଭାଇସକୁ ଆପଣଙ୍କ ଦିନର ଇଭେଣ୍ଟଗୁଡ଼ିକ ସହିତ ସିଙ୍କରେ ରଖନ୍ତୁ"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"100% ସୁସ୍ଥ ପରି ଅନୁଭବ କରି ଉଠନ୍ତୁ"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"ରାସ୍ତାରେ ଯିବା ସମୟରେ ସୁରକ୍ଷାକୁ ପ୍ରାଥମିକତା ଦିଅନ୍ତୁ"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"ନିଜ ଜୋନକୁ ଯିବା ପାଇଁ ଫୋକସ କରନ୍ତୁ"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"ମୁହୂର୍ତ୍ତଗୁଡ଼ିକ ପାଇଁ ଯେତେବେଳେ ସୌଜନ୍ୟର ଗୁରୁତ୍ୱ ରହିଥାଏ"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"ଆପଣଙ୍କୁ ଭଲ ସହାୟତା ମିଳିବାରେ ସାହାଯ୍ୟ କରିବା ପାଇଁ ମାର୍ଗଦର୍ଶନର ବ୍ୟବହାର"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"ଆପଣଙ୍କ ଧ୍ୟାନ ଉପରେ ନିୟନ୍ତ୍ରଣ ରଖନ୍ତୁ"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"ଚେତାବନୀ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ଏହି ଡିଭାଇସ ବିଷୟରେ ମତାମତ ପଠାନ୍ତୁ"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"ନିଶ୍ଚିତ ଭାବେ ଚାଲୁଥିବା ଦରକାର କାରଣ ବିଜ୍ଞପ୍ତି ଆକ୍ସେସ୍‌ ଅନ୍‌ ଅଛି"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> ପାଇଁ \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\" ଆକ୍‌ସେସ୍‌ ରଦ୍ଦ କରିବେ?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ଏହି ଆପ୍‌ ଦ୍ୱାରା, \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\" ପାଇଁ କରାଯାଇଥିବା ସମସ୍ତ ନିୟମ କାଢ଼ିଦିଆଯିବ।"</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> ପାଇଁ ପ୍ରାଥମିକତା ମୋଡକୁ ଆକ୍ସେସ କରିବା ପାଇଁ ଅନୁମତି ଦେବେ?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ଏହି ଆପ \"ବିରକ୍ତ କରନ୍ତୁ ନାହିଁ\"କୁ ଚାଲୁ/ବନ୍ଦ କରିବା, ପ୍ରାଥମିକତା ମୋଡକୁ ପରିଚାଳନା ଓ ସକ୍ରିୟ କରିବା ଏବଂ ସମ୍ବନ୍ଧିତ ସେଟିଂସରେ ପରିବର୍ତ୍ତନ କରିବାକୁ ସକ୍ଷମ ହେବ।"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> ପାଇଁ ପ୍ରାଥମିକତା ମୋଡକୁ ଆକ୍ସେସ ପ୍ରତ୍ୟାହାର କରିବେ?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ଏହି ଆପ ଦ୍ୱାରା ତିଆରି କରାଯାଇଥିବା ସମସ୍ତ ମୋଡକୁ କାଢ଼ି ଦିଆଯିବ।"</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ଅନୁକୁଳ କରନାହିଁ"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ଅପ୍ଟିମାଇଜ୍ କରନ୍ତୁ"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"ଆପଣଙ୍କ ବ୍ୟାଟେରୀ ଖୁବ୍ ଶୀଘ୍ର ସରିଯାଇପାରେ। ବ୍ୟାକଗ୍ରାଉଣ୍ଡ ବ୍ୟାଟେରୀକୁ ବ୍ୟବହାର କରିବା ପାଇଁ ଆଉ ଆପ୍‍କୁ ବାଧା ଦେଇହେବ ନାହିଁ।"</string>
