--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Badilisha"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Maelezo ya kifaa"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Mipangilio ya kibodi"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Mipangilio zaidi"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Masasisho ya programu dhibiti, kuhusu na mengineyo"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Anwani ya Bluetooth ya kifaa chako: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Anwani ya Bluetooth ya kifaa:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Ungependa kusahau kifaa?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Ya majaribio. Huboresha sauti."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Sahau kifaa"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Tenganisha programu"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Mipangilio zaidi"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Kima cha juu zaidi cha vifaa vya sauti vya Bluetooth vilivyounganishwa"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Chagua kima cha juu zaidi cha vifaa vya sauti vya Bluetooth vilivyounganishwa"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Kumbukumbu ya kina ya utatuzi ya mtoa huduma"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Ungependa kutumia <xliff:g id="CARRIER">%1$s</xliff:g> kwa ajili ya data ya mtandao wa simu?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Unatumia <xliff:g id="CARRIER2_0">%2$s</xliff:g> kwa ajili ya data ya mtandao wa simu. Ukibadilisha uweke <xliff:g id="CARRIER1">%1$s</xliff:g>, <xliff:g id="CARRIER2_1">%2$s</xliff:g> haitatumika tena kwa ajili ya data ya mtandao wa simu."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Tumia <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Ungependa kusasisha SIM unayopendelea?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> ndiyo SIM pekee iliyo katika kifaa chako. Ungependa kutumia SIM hii kupata data ya mtandao wa simu, kupiga simu na kutuma SMS?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Ungependa kuboresha ufikiaji wa data ya mtandao wa simu?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Ruhusu kifaa chako kibadilishe na kutumia <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> kiotomatiki kwa ajili ya data ya mtandao wa simu inapopatikana kwa ubora."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Huenda simu, ujumbe na trafiki ya mtandao vikaonekana kwa shirika lako."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Weka mapendeleo kwenye ishara maalum za kusogeza za padi ya kugusa"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Usogezaji kinyume"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Maudhui husogea juu unaposogeza chini"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Mguso wa chini kulia"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Gusa kona ya upande wa chini kulia wa padi ya kugusa kwa chaguo zaidi"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Kubofya chini kulia"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Bofya kona ya chini kulia mwa padi ya kugusa kwa chaguo zaidi"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Kasi ya kiashiria"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Rangi ya kielekezi"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Badilisha kielekezi kiwe cheusi"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Imewashwa / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> na <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Pia, unaweza kuwasha kipengele cha Sauti Inayojirekebisha kwa Vifaa vyenye Bluetooth."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Mipangilio ya vifaa vilivyounganishwa"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Sauti Inayojirekebisha Kulingana na Hali"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Imezimwa"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Imezimwa"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Imezimwa"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Hamna}=1{Pana ratiba moja}other{Pana ratiba #}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Usinisumbue"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Hali za Kipaumbele"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"washa mandhari meusi"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Badili mfumo wa uendeshaji na programu uwe katika hali ya napendelea maandishi mepesi kwenye mandharinyuma meusi\", ambayo yanaweza kuonekana kwa urahisi na yanapelekea uokoaji mkubwa wa betri kwenye baadhi ya vifaa."</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Hakuna mabadiliko kwenye skrini}=1{{effect_1}}=2{{effect_1} na {effect_2}}=3{{effect_1}, {effect_2} na {effect_3}}other{{effect_1}, {effect_2} na # zaidi}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Punguza arifa unazoweza kupokea"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Hakuna matukio ya kukatiza yaliyochujwa"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Ruhusu arifa zote"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Watu, programu na sauti zinaweza kukatiza huduma"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Chaguo za kuonyesha arifa zilizochujwa"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Wakati umewasha kipengele cha Usinisumbue"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Arifa zisitoe sauti"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Inaweza kujibu ujumbe na kuchukua hatua kwenye vitufe katika arifa, ikiwa ni pamoja na kuahirisha au kuondoa arifa na kujibu simu."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Kubadilisha mipangilio"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Inaweza kuwasha au kuzima kipengele cha Usinisumbue na kubadilisha mipangilio inayohusiana nacho."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Inaweza kudhibiti na kuwezesha Hali za Kipaumbele na kubadilisha mipangilio inayohusiana."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Ukizima ufikiaji wa arifa katika <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, huenda hali hii pia ikazima ufikiaji wa kipengee cha Usinisumbue."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Ukizima uwezo wa <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> wa kufikia arifa, ufikiaji wa Hali za Kipaumbele unaweza pia kuzimwa."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Zima"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Ghairi"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Muda halisi"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Kufikia kipengele cha Usinisumbue"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Ruhusu kipengele cha Usinisumbue"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Hakuna programu zilizosakinishwa ambazo zimeomba kufikia kipengele cha Usinisumbue"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Ufikiaji wa Hali za Kipaumbele"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Ruhusu ufikiaji wa Hali za Kipaumbele"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Hakuna programu zilizowekwa kwenye kifaa ambazo zimeomba kufikia Hali za Kipaumbele"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Hujaruhusu arifa kutoka kwenye programu hii"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Kutokana na ombi lako, Android inazuia aina hizi za arifa ili zisionekane kwenye kifaa hiki"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Kutokana na ombi lako, Android inazuia kikundi hiki cha arifa ili zisionekane kwenye kifaa hiki"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Ondoa shughuli zote usizohitaji ili uwe na mazingira tulivu"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Weka mapendeleo ya mipangilio na ya matumizi ya kifaa kwa watumiaji tofauti"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Punguza usumbufu kwa kuruhusu tu watu na programu muhimu kukufikia"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Weka hali inayofuata ratiba ya kawaida"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Hakikisha kifaa chako kimesawazishwa na kinalingana na matukio ya siku yako"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Amka ukiwa mchangamfu kabisa"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Zingatia usalama kwanza ukiwa barabarani"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Makinika zaidi ili uboreshe tija"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Kwa matukio ambapo heshima ni muhimu"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Matumizi yenye maelekezo yanayokusaidia uchukue hatua bora na salama"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Dhibiti umakini wako"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Onyo"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Funga"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Tuma maoni kuhusu kifaa hiki"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Lazima kiwe kimewashwa kwa sababu kipengele cha ufikiaji wa arifa kimewashwa"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Ungependa kubatilisha idhini ya <xliff:g id="APP">%1$s</xliff:g> ya kufikia kipengele cha Usinisumbue?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Itaondoa sheria zote za Usinisumbue ambazo zimetengenezwa na programu hii."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Ungependa kuruhusu <xliff:g id="APP">%1$s</xliff:g> ifikie Hali za Kipaumbele?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Programu itaweza kuwasha au kuzima kipengele cha Usinisumbue, kudhibiti na kuwasha Hali za Kipaumbele na kufanya mabadiliko kwenye mipangilio inayohusiana."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Ungependa kubatilisha uwezo wa <xliff:g id="APP">%1$s</xliff:g> wa kufikia Hali za Kipaumbele?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Hali zote zilizobuniwa na programu hii zitaondolewa."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Usiboreshe"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Boresha"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Huenda ikamaliza chaji ya betri yako haraka zaidi. Programu haitazuiwa tena kutumia betri chinichini."</string>
