--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"మార్చండి"</string>
     <string name="device_details_title" msgid="1155622417516195481">"పరికర వివరాలు"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"కీబోర్డ్ సెట్టింగ్‌లు"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"మరిన్ని సెట్టింగ్‌లు"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"ఫర్మ్‌వేర్ అప్‌డేట్‌లు, పరిచయం, మరిన్ని"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"పరికర బ్లూటూత్ అడ్రస్: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"పరికర బ్లూటూత్ అడ్రస్:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"పరికరాన్ని మర్చిపోవాలా?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"ప్రయోగం. ఆడియో క్వాలిటీని బాగుచేస్తుంది."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"పరికరాన్ని విస్మరించండి"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"యాప్‌ను డిస్‌కనెక్ట్ చేయండి"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"మరిన్ని సెట్టింగ్‌లు"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"గరిష్ఠంగా కనెక్ట్ అయిన బ్లూటూత్ ఆడియో పరికరాలు"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"గరిష్ఠ సంఖ్యలో కనెక్ట్ అయిన బ్లూటూత్ ఆడియో పరికరాలను ఎంచుకోండి"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC వెర్బోస్ విక్రేత డీబగ్ లాగ్"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"మొబైల్ డేటా కోసం <xliff:g id="CARRIER">%1$s</xliff:g> ఉపయోగించాలా?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"మీరు మొబైల్ డేటా కోసం <xliff:g id="CARRIER2_0">%2$s</xliff:g>ను వినియోగిస్తున్నారు. మీరు <xliff:g id="CARRIER1">%1$s</xliff:g>కు మారితే, <xliff:g id="CARRIER2_1">%2$s</xliff:g> ఇప్పటి నుండి మొబైల్ డేటా కోసం ఉపయోగించబడదు."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"<xliff:g id="CARRIER">%1$s</xliff:g>ని ఉపయోగించండి"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"ప్రాధాన్య SIM అప్‌డేట్ చేయాలా?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"మీ పరికరంలో <xliff:g id="NEW_SIM">%1$s</xliff:g> SIM మాత్రమే ఉంది. మొబైల్ డేటా, కాల్స్‌, SMS మెసేజ్‌ల కోసం మీరు ఈ SIMను ఉపయోగించాలని అనుకుంటున్నారా?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"మొబైల్ డేటాను మెరుగుపరచాలా?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"<xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> మెరుగైన నెట్‌వర్క్‌ను కలిగి ఉన్నప్పుడు, మొబైల్ డేటా కోసం ఆటోమేటిక్‌గా దానికి మారడానికి మీ పరికరాన్ని అనుమతించండి."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"మీ సంస్థకు కాల్స్, మెసేజ్‌లు, నెట్‌వర్క్ ట్రాఫిక్ కనిపించవచ్చు."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"ఒక్కొక్క టచ్‌ప్యాడ్ నావిగేషన్ సంజ్ఞను అనుకూలంగా మార్చండి"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"రివర్స్ స్క్రోలింగ్"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"మీరు దిగువకు స్క్రోల్ చేసినప్పుడు కంటెంట్ ఎగువకు జరపబడుతుంది"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"దిగువ కుడి ట్యాప్"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"మనిన్ని ఆప్షన్‌లకై టచ్‌ప్యాడ్ దిగువ కుడి మూలన ట్యాప్ చేయండి"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"దిగువున కుడి వైపున క్లిక్ చేయడం"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"మరిన్ని ఆప్షన్‌లకై టచ్‌ప్యాడ్ కింద కుడి మూలన క్లిక్ చేయండి"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"పాయింటర్ స్పీడ్"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"పాయింటర్ ఫిల్ స్టయిల్"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"పాయింటర్ ఫిల్ స్టయిల్‌ను నలుపు రంగుకి మార్చండి"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"ఆన్‌లో ఉన్నాయి / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g>, <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"మీరు బ్లూటూత్ పరికరాలకు కూడా స్పేషియల్ ఆడియోను ఆన్ చేయవచ్చు."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"కనెక్ట్ అయిన పరికరాల సెట్టింగ్‌లు"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"స్పేషియల్ ఆడియో"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"ఆఫ్‌లో ఉంది"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"ఆఫ్‌లో ఉంది"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"ఆఫ్‌లో ఉంది"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ఏవీ లేవు}=1{1 షెడ్యూల్ సెట్ చేయబడింది}other{# షెడ్యూళ్లు సెట్ చేయబడ్డాయి}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"అంతరాయం కలిగించవద్దు"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"ముఖ్యమైన ఫైల్స్ మోడ్స్"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"డార్క్ థీమ్‌ను ఎనేబుల్ చేయండి"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"డార్క్ బ్యాక్‌గ్రౌండ్‌లో లైట్ టెక్స్ట్‌ కోసం OSను, యాప్‌లను మార్చండి. దీనివల్ల కంటికి హాయిగా ఉండే అవకాశం ఉంది. కొన్ని పరికరాలలో బ్యాటరీ గణనీయంగా సేవ్ అవుతుంది"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{అదనపు మార్పులు ఏవీ లేవు}=1{{effect_1}}=2{{effect_1}, {effect_2}}=3{{effect_1}, {effect_2}, {effect_3}}other{{effect_1}, {effect_2}, అలాగే మరో # ఎఫెక్ట్‌లు}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"మీరు ఏ నోటిఫికేషన్‌లను పొందాలో పరిమితి చేయండి"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"అంతరాయాలు ఏవీ ఫిల్టర్ చేయబడవు"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"అన్ని నోటిఫికేషన్‌లను అనుమతించండి"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"వ్యక్తులు, యాప్స్, ఇంకా సౌండ్‌లు అంతరాయాన్ని కలిగించవచ్చు"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"ఫిల్టర్ చేసిన నోటిఫికేషన్‌ల కోసం డిస్‌ప్లే ఆప్షన్‌లు"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"\'అంతరాయం కలిగించవద్దు\' మోడ్ ఆన్‌లో ఉన్నప్పుడు"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"నోటిఫికేషన్‌ల సౌండ్ రాదు"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"ఇది మెసేజ్‌లకు రిప్లయి ఇవ్వగలదు, అలాగే నోటిఫికేషన్‌లను తాత్కాలికంగా వాయిదా వేయడం లేదా విస్మరించడం, ఇంకా కాల్స్‌కు సమాధానం ఇవ్వడంతో పాటు నోటిఫికేషన్‌లలోని బటన్‌లపై చర్య తీసుకోగలదు."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"సెట్టింగ్‌లను మార్చడం"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"ఇది \'అంతరాయం కలిగించవద్దు\'ను ఆన్ లేదా ఆఫ్ చేయగలదు, అలాగే సంబంధిత సెట్టింగ్‌లను మార్చగలదు."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"ఇది ప్రాధాన్యత గల మోడ్స్‌ను మేనేజ్ చేయగలదు, యాక్టివేట్ చేయగలదు, ఇంకా సంబంధిత సెట్టింగ్‌లను మార్చగలదు."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"మీరు <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> కోసం నోటిఫికేషన్ యాక్సెస్‌ను ఆఫ్ చేస్తే, అంతరాయం కలిగించవద్దు ఎంపిక యాక్సెస్ కూడా ఆఫ్ చేయబడవచ్చు."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"మీరు <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> కోసం నోటిఫికేషన్ యాక్సెస్‌ను ఆఫ్ చేస్తే, ప్రాధాన్యత గల మోడ్స్ కూడా ఆఫ్ చేయబడవచ్చు."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"ఆఫ్ చేయండి"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"రద్దు చేయండి"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"రియల్-టైమ్"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"అంతరాయం కలిగించవద్దు యాక్సెస్"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"\'అంతరాయం కలిగించవద్దు\' ఫీచర్‌ను అనుమతించండి"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"ఇన్‌స్టాల్ చేసిన యాప్‌లేవీ అంతరాయం కలిగించవద్దు యాక్సెస్ రిక్వెస్ట్ చేయలేదు"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"ప్రాధాన్యత గల మోడ్స్‌కు యాక్సెస్"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"ప్రాధాన్యత గల మోడ్స్‌కు యాక్సెస్‌ను అనుమతించండి"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"ఇన్‌స్టాల్ చేసిన యాప్‌లు ఏవీ ప్రాధాన్యత గల మోడ్స్‌కు యాక్సెస్‌ను రిక్వెస్ట్ చేయలేదు"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"మీరు ఈ యాప్ నుండి నోటిఫికేషన్‌లను అనుమతించలేదు"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"మీ రిక్వెస్ట్ మేరకు ఈ పరికరంలో ఈ కేటగిరీకి చెందిన నోటిఫికేషన్‌లు కనిపించకుండా Android బ్లాక్ చేస్తోంది"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"మీ అభ్యర్ధన మేరకు Android, ఈ పరికరంలో ఈ గ్రూప్‌ యొక్క నోటిఫికేషన్‌లను కనిపించకుండా బ్లాక్ చేస్తోంది"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"నిశ్శబ్ద వాతావరణం కోసం అన్ని పరధ్యానాలను తొలగించండి"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"వేర్వేరు యూజర్‌ల కోసం పరికర ఎక్స్‌పీరియన్స్‌లను, సెట్టింగ్‌లను వ్యక్తిగతీకరించండి"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"ముఖ్యమైన వ్యక్తులను, యాప్స్‌ను మాత్రమే మిమ్మల్ని సంప్రదించడానికి అనుమతించడం ద్వారా అంతరాయాలను తగ్గించండి"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"రెగ్యులర్ షెడ్యూల్‌ను ఫాలో అయ్యే మోడ్‌ను సెట్ చేయండి"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"రోజువారీ ఈవెంట్‌లతో మీ పరికరాన్ని సింక్‌లో ఉంచండి"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"తాజా అనుభూతితో మేల్కొనండి"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"రోడ్డుపై ఉన్నప్పుడు ముందు, భద్రతకు ప్రాధాన్యత ఇవ్వండి"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"ఫుల్ ఫోకస్‌తో, ఫుల్ కాన్‌సెన్‌ట్రేషన్‌తో ఉండండి"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"మీరు వ్యూహాత్మకంగా వ్యవహరించాల్సిన పరిస్థితుల కోసం"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"మిమ్మల్ని సురక్షితంగా ఉంచడంలో సహాయపడటానికి సూచనలను అనుసరించండి"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"మీ దృష్టిని కంట్రోల్ చేయండి"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"హెచ్చరిక"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"మూసివేయండి"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ఈ పరికరంపై ఫీడ్‌బ్యాక్‌ ఇవ్వండి"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"నోటిఫికేషన్ యాక్సెస్ ఆన్‌లో ఉన్నందున తప్పనిసరిగా ఇది ఆన్‌లో ఉండాలి"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"<xliff:g id="APP">%1$s</xliff:g> కోసం అంతరాయం కలిగించవద్దు ఫీచర్‌కు ఉన్న యాక్సెస్‌ను ఉపసంహరించాలా?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"ఈ యాప్ ద్వారా రూపొందించిన అన్ని అంతరాయం కలిగించవద్దు నియమాలు తీసివేయబడతాయి."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"<xliff:g id="APP">%1$s</xliff:g> కోసం ప్రాధాన్యత గల మోడ్స్‌కు యాక్సెస్‌ను అనుమతించాలా?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"ఈ యాప్ అంతరాయం కలిగించవద్దు అనే ఆప్షన్‌ను ఆన్/ఆఫ్ చేయగలదు, ప్రాధాన్యత గల మోడ్స్‌ను మేనేజ్ చేయగలదు, యాక్టివేట్ చేయగలదు, ఇంకా సంబంధిత సెట్టింగ్‌లకు మార్పులు చేయగలదు."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"<xliff:g id="APP">%1$s</xliff:g> కోసం ప్రాధాన్యత గల మోడ్స్ యాక్సెస్‌ను ఉపసంహరించాలా?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"ఈ యాప్ ద్వారా క్రియేట్ చేయబడిన అన్ని మోడ్స్ తీసివేయబడతాయి."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"ఆప్టిమైజ్ చేయవద్దు"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"ఆప్టిమైజ్ చేయి"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"మీ బ్యాటరీ మరింత త్వరగా వినియోగించబడవచ్చు. ఇకపై ఈ యాప్ నేపథ్య బ్యాటరీ వినియోగం పరిమితం చేయబడదు."</string>
@@ -5400,7 +5382,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"కొత్త పరికరాన్ని పెయిర్ చేయండి"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"QR కోడ్‌ను చూపండి"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"మీరు ఆడియోను షేర్ చేస్తున్నారు"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"వినే వ్యక్తులు మీ మీడియాను వినగలరు. వారు పిలుపును వినలేరు."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"వింటోన్న వ్యక్తులకు మీ మీడియా ఫైళ్లు వినిపిస్తాయి. వారికి మీ కాల్స్ వినిపించవు."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"షేరింగ్ ఆపివేయండి"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"సెట్టింగ్‌లు"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"డిస్‌కనెక్ట్ చేయడానికి పరికరాన్ని ఎంచుకోండి"</string>
