--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Palitan"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Mga detalye ng device"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Mga setting ng keyboard"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Higit pang setting"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Mga update sa firmware, tungkol dito, at higit pa"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth address ng device: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Address ng bluetooth ng device:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Kalimutan ang device?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Pang-eksperimento. Nagpapaayos sa audio."</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Kalimutan ang device"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Idiskonekta ang app"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Higit pang setting"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maximum na nakakonektang mga Bluetooth audio device"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Piliin ang maximum na bilang ng mga nakakonektang Bluetooth audio device"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log ng pag-debug ng verbose vendor ng NFC"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Gamitin ang <xliff:g id="CARRIER">%1$s</xliff:g> sa mobile data?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Ginagamit mo ang <xliff:g id="CARRIER2_0">%2$s</xliff:g> para sa mobile data. Kung lilipat ka sa <xliff:g id="CARRIER1">%1$s</xliff:g>, hindi na gagamitin ang <xliff:g id="CARRIER2_1">%2$s</xliff:g> para sa mobile data."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Gamitin ang <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"I-update ang gustong SIM?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"<xliff:g id="NEW_SIM">%1$s</xliff:g> lang ang SIM sa iyong device. Gusto mo bang gamitin ang SIM na ito para sa mobile data, mga tawag, at SMS message?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Pahusayin ang sakop ng mobile data?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Payagan ang iyong device na awtomatikong lumipat sa <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g> para sa mobile data kapag mas available ito."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Baka nakikita ng iyong organisasyon ang mga tawag, mensahe, at trapiko ng network."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"I-customize ang mga indibidwal na galaw sa pag-navigate sa touchpad"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Reverse na pag-scroll"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Gumagalaw pataas ang content kapag nag-scroll ka pababa"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Pag-tap sa kanang bahagi sa ibaba"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"I-tap ang kanang sulok sa ibaba ng touchpad para sa higit pang opsyon"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Pag-click sa kanang bahagi sa ibaba"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"I-click ang kanang sulok sa ibaba ng touchpad para sa opsyon"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Bilis ng pointer"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Istilo ng fill ng pointer"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Gawing itim ang fill ng pointer"</string>
@@ -3409,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"i-enable ang madilim na tema"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"I-switch ang OS at mga app para piliin ang maliwanag na text sa madilim na background, na posibleng mas magaan sa mata at mas nakakatipid ng baterya sa ilang device"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Walang pagbabago sa display}=1{{effect_1}}=2{{effect_1} at {effect_2}}=3{{effect_1}, {effect_2}, at {effect_3}}one{{effect_1}, {effect_2}, at # pa}other{{effect_1}, {effect_2}, at # pa}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Limitahan kung ano ang puwedeng mag-abiso sa iyo"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Walang fini-filter na abala"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Payagan ang lahat ng notification"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Puwedeng makaabala ang mga tao, app, at tunog"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Mga opsyon sa display para sa mga naka-filter na notification"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Kapag naka-on ang Huwag Istorbohin"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Walang tunog mula sa mga notification"</string>
@@ -3637,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Puwede nitong sagutin ang mga mensahe at gamitin ang mga button sa mga notification, kabilang ang pag-snooze o pag-dismiss ng mga notification at pagsagot ng mga tawag."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Baguhin ang mga setting"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Puwede nitong i-on o i-off ang Huwag Istorbohin at baguhin ang mga nauugnay na setting."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Mapapamahalaan at maa-activate nito ang Mga Priority Mode, at mababago nito ang mga nauugnay na setting."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Kung io-off mo ang access sa notification para kay <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, mao-off din ang access sa Huwag Istorbohin."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Kung io-off mo ang access sa notification para kay <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, puwede ring i-off ang access sa Mga Priority Mode."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"I-off"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Kanselahin"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"Real-time"</string>
@@ -3702,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Access na Huwag Istorbohin"</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Payagan ang Huwag Istorbohin"</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Walang mga naka-install na app ang humiling ng access na Huwag Istorbohin"</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Access sa Mga Priority Mode"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Payagan ang access sa Mga Priority Mode"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Walang naka-install na app ang nag-request ng access sa Mga Priority Mode"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Hindi mo pinayagan ang mga notification mula sa app na ito"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Bilang tugon sa iyong kahilingan, pinipigilan ng Android na lumabas sa device na ito ang ganitong kategorya ng mga notification"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Bilang tugon sa iyong kahilingan, pinipigilan ng Android na lumabas sa device na ito ang ganitong grupo ng mga notification"</string>
@@ -3890,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Alisin ang lahat ng istorbo para sa tahimik na kapaligiran"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"I-personalize ang mga karanasan sa device at mga setting para sa iba\'t ibang user"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Bawasan ang mga istorbo sa pamamagitan ng pagbibigay ng pahintulot sa mahahalagang tao at app lang para makipag-ugnayan sa iyo"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Magtakda ng mode na sumusunod sa regular na iskedyul"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Panatilihing naka-sync ang iyong device sa mga kaganapan sa araw mo"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Gumising na 100% ang pakiramdam"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Unahin ang kaligtasan habang nasa kalsada"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Mag-focus para maging handa"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Para sa mga sandali kung kailan mahalaga ang kagandahang-loob"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"May gabay na paggamit para matulungan kang manatili sa mabuting kalagayan"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Kontrolin ang iyong atensyon"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Babala"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Isara"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Feedback tungkol sa device"</string>
@@ -4106,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Dapat manatiling naka-on dahil naka-on ang access sa notification"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Babawiin ang access sa Huwag Istorbohin para sa <xliff:g id="APP">%1$s</xliff:g>?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Aalisin ang lahat ng panuntunang Huwag Istorbohin na ginawa ng app na ito."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Payagan ang access sa Mga Priority Mode para sa <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Mao-on/mao-off ng app ang Huwag Istorbohin, mapapamahalaan at maa-activate ang Mga Priority Mode, at makakagawa ng mga pagbabago sa mga nauugnay na setting."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Bawiin ang access sa Mga Priority Mode para sa <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Aalisin ang lahat ng mode na ginawa ng app na ito."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Huwag i-optimize"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"I-optimize"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Maaaring mas mabilis na makaubos ng iyong baterya. Hindi na paghihigpitan ang app na gamitin ang background na baterya."</string>
