--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -836,6 +836,8 @@
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"Змінити"</string>
     <string name="device_details_title" msgid="1155622417516195481">"Про пристрій"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"Налаштування клавіатури"</string>
+    <string name="bluetooth_device_more_settings_preference_title" msgid="6034482566541746500">"Інші налаштування"</string>
+    <string name="bluetooth_device_more_settings_preference_summary" msgid="7639584132778245426">"Оновлення мікропрограми, дані про пристрій тощо"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Адреса Bluetooth пристрою: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Адреса Bluetooth пристрою:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Забути пристрій?"</string>
@@ -845,6 +847,7 @@
     <string name="device_details_leaudio_toggle_summary" msgid="7684848254433230809">"Експерим. функція. Покращує якість аудіо"</string>
     <string name="bluetooth_unpair_dialog_forget_confirm_button" msgid="9184489424930549015">"Забути пристрій"</string>
     <string name="bluetooth_companion_app_remove_association_confirm_button" msgid="76323555527926915">"Від’єднати додаток"</string>
+    <string name="device_details_more_settings" msgid="950302792331611271">"Інші налаштування"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Максимальна кількість підключених аудіопристроїв Bluetooth"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Вибрати максимальну кількість підключених аудіопристроїв Bluetooth"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Детальний журнал налагодження для постачальника NFC"</string>
@@ -1332,8 +1335,8 @@
     <string name="sim_change_data_title" msgid="4663239438584588847">"Чи має <xliff:g id="CARRIER">%1$s</xliff:g> використовуватися для мобільного передавання даних?"</string>
     <string name="sim_change_data_message" msgid="3046178883369645132">"Оператор <xliff:g id="CARRIER2_0">%2$s</xliff:g> використовується для мобільного передавання даних. Якщо ви перейдете до оператора <xliff:g id="CARRIER1">%1$s</xliff:g>, оператор <xliff:g id="CARRIER2_1">%2$s</xliff:g> більше не використовуватиметься для мобільної передачі даних."</string>
     <string name="sim_change_data_ok" msgid="4922114750417276560">"Використовувати <xliff:g id="CARRIER">%1$s</xliff:g>"</string>
-    <string name="sim_preferred_title" msgid="8850185380445309835">"Змінити основну SIM-карту?"</string>
-    <string name="sim_preferred_message" msgid="6004009449266648351">"На вашому пристрої є лише одна SIM-карта – <xliff:g id="NEW_SIM">%1$s</xliff:g>. Використовувати цю SIM-карту для мобільного трафіку, викликів і SMS-повідомлень?"</string>
+    <!-- no translation found for sim_preferred_message (4894337280925553873) -->
+    <skip />
     <string name="enable_auto_data_switch_dialog_title" msgid="3563043560556718994">"Покращувати мобільний зв’язок?"</string>
     <string name="enable_auto_data_switch_dialog_message" msgid="5777287241521946883">"Дозвольте пристрою автоматично перемикатися на мобільний Інтернет оператора <xliff:g id="BACKUP_CARRIER">%1$s</xliff:g>, коли в його мережі краща якість зв’язку."</string>
     <string name="auto_data_switch_dialog_managed_profile_warning" msgid="6839438290079866605">\n\n"Журнали викликів, повідомлення та мережевий трафік можуть бачити адміністратори вашої організації."</string>
@@ -1938,8 +1941,8 @@
     <string name="trackpad_touchpad_gesture_summary" msgid="6256074591395359124">"Налаштуйте жести для навігації на сенсорній панелі"</string>
     <string name="trackpad_reverse_scrolling_title" msgid="422877284529360866">"Зворотне прокручування"</string>
     <string name="trackpad_reverse_scrolling_summary" msgid="6048648562887499036">"Якщо прокручувати вниз, вміст екрана переміщується вгору"</string>
-    <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Дотик у нижньому правому куті"</string>
-    <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Торкніться правого нижнього кута, щоб переглянути інші опції"</string>
+    <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"Дотик у правому нижньому куті"</string>
+    <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"Натисніть сенсорну панель справа внизу, щоб побачити інші опції"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Швидкість курсора"</string>
     <string name="pointer_fill_style" msgid="8413840032931637595">"Стиль заповнення курсора"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Змінити стиль курсора на чорний"</string>
@@ -3336,14 +3339,10 @@
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Увімкнено / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> і <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Для пристроїв із Bluetooth також можна ввімкнути просторове звучання."</string>
     <string name="spatial_audio_footer_learn_more_text" msgid="3826811708094366301">"Налаштування підключених пристроїв"</string>
-    <!-- no translation found for spatial_audio_multi_toggle_title (6175786400035541273) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_off (2086359413991193164) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_on (2988769235357633788) -->
-    <skip />
-    <!-- no translation found for spatial_audio_multi_toggle_head_tracking_on (861779551619033627) -->
-    <skip />
+    <string name="spatial_audio_multi_toggle_title" msgid="6175786400035541273">"Просторове звучання"</string>
+    <string name="spatial_audio_multi_toggle_off" msgid="2086359413991193164">"Вимкнено"</string>
+    <string name="spatial_audio_multi_toggle_on" msgid="2988769235357633788">"Вимкнено"</string>
+    <string name="spatial_audio_multi_toggle_head_tracking_on" msgid="861779551619033627">"Вимкнено"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Немає}=1{Налаштовано 1 розклад}one{Налаштовано # розклад}few{Налаштовано # розклади}many{Налаштовано # розкладів}other{Налаштовано # розкладу}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Не турбувати"</string>
     <string name="zen_modes_list_title" msgid="5138745349253275428">"Режими пріоритету"</string>
@@ -3413,8 +3412,8 @@
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"увімкнути темну тему"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Змініть налаштування ОС і додатків, щоб використовувати світлий текст на темному фоні. Це може бути комфортніше для очей і допомагає суттєво економити заряд акумулятора на деяких пристроях."</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Немає змін параметрів відображення}=1{{effect_1}}=2{{effect_1} і {effect_2}}=3{{effect_1}, {effect_2} і {effect_3}}one{{effect_1}, {effect_2} і ще #}few{{effect_1}, {effect_2} і ще #}many{{effect_1}, {effect_2} і ще #}other{{effect_1}, {effect_2} і ще #}}"</string>
-    <string name="mode_notification_filter_title" msgid="1977578854503464865">"Виберіть, які сповіщення дозволені"</string>
-    <string name="mode_no_notification_filter" msgid="7119188047783404890">"Сповіщення не фільтруються"</string>
+    <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Дозволити всі сповіщення"</string>
+    <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Можуть надходити сповіщення, пов’язані з людьми, додатками й звуками"</string>
     <string name="zen_mode_restrict_notifications_title" msgid="4926944083757096458">"Параметри відображення відфільтрованих сповіщень"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Коли ввімкнено режим \"Не турбувати\""</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Вимкнути звук сповіщень"</string>
@@ -3641,11 +3640,9 @@
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Може відповідати на повідомлення та виконувати дії з кнопками в сповіщеннях, зокрема відкладати або закривати їх і відповідати на дзвінки."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Змінювати налаштування"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Може вмикати й вимикати режим \"Не турбувати\" та змінювати пов’язані з ним налаштування."</string>
-    <!-- no translation found for nls_feature_modes_settings_summary (6678225711796413093) -->
-    <skip />
+    <string name="nls_feature_modes_settings_summary" msgid="6678225711796413093">"Додаток може керувати режимами пріоритету, активувати їх і змінювати пов’язані з ними налаштування."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Якщо ви вимкнете доступ додатка <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> до сповіщень, доступ до режиму \"Не турбувати\" також буде вимкнено."</string>
-    <!-- no translation found for notification_listener_disable_modes_warning_summary (2985662620702322307) -->
-    <skip />
+    <string name="notification_listener_disable_modes_warning_summary" msgid="2985662620702322307">"Якщо вимкнути доступ додатка <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> до сповіщень, доступ до режимів пріоритету також буде вимкнено."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Вимкнути"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Скасувати"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"У реальному часі"</string>
@@ -3706,12 +3703,9 @@
     <string name="manage_zen_access_title" msgid="1562322900340107269">"Доступ у режимі \"Не турбувати\""</string>
     <string name="zen_access_detail_switch" msgid="4183681772666138993">"Дозволити доступ у режимі \"Не турбувати\""</string>
     <string name="zen_access_empty_text" msgid="3779921853282293080">"Установлені додатки не запитували доступу до функції \"Не турбувати\""</string>
-    <!-- no translation found for manage_zen_modes_access_title (7568322052929075783) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_detail_switch (19797205786545052) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_empty_text (6393146155692575897) -->
-    <skip />
+    <string name="manage_zen_modes_access_title" msgid="7568322052929075783">"Доступ до режимів пріоритету"</string>
+    <string name="zen_modes_access_detail_switch" msgid="19797205786545052">"Дозволити доступ до режимів пріоритету"</string>
+    <string name="zen_modes_access_empty_text" msgid="6393146155692575897">"Установлені додатки не надсилали запит на доступ до режимів пріоритету"</string>
     <string name="app_notifications_off_desc" msgid="2484843759466874201">"Ви не дозволили сповіщення з цього додатка"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"На ваш запит Android блокує цю категорію сповіщень на пристрої"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"На ваш запит Android блокує цю групу сповіщень на пристрої"</string>
@@ -3894,22 +3888,14 @@
     <string name="zen_mode_blurb_theater" msgid="2999237960059524225">"Заблокуйте все, що може вас відволікати, щоб створити спокійну атмосферу"</string>
     <string name="zen_mode_blurb_managed" msgid="5473921634985032149">"Персоналізуйте роботу з пристроєм і налаштування для різних користувачів"</string>
     <string name="zen_mode_blurb_generic" msgid="3041601339807075625">"Щоб менше відволікатися, дозвольте сповіщення лише від важливих людей і додатків"</string>
-    <!-- no translation found for zen_mode_inspiration_schedule_time (5596540503159096153) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_schedule_calendar (3678727180860212700) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_bedtime (6294822414181670666) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_driving (8237825783857483135) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_immersive (4062437428955782933) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_theater (9194190183262761230) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_managed (4607010392213773917) -->
-    <skip />
-    <!-- no translation found for zen_mode_inspiration_generic (9072064817144550243) -->
-    <skip />
+    <string name="zen_mode_inspiration_schedule_time" msgid="5596540503159096153">"Налаштуйте режим, що працюватиме регулярно протягом певного часу дня"</string>
+    <string name="zen_mode_inspiration_schedule_calendar" msgid="3678727180860212700">"Синхронізуйте свій пристрій із подіями дня"</string>
+    <string name="zen_mode_inspiration_bedtime" msgid="6294822414181670666">"Прокидайтеся з відчуттям бадьорості"</string>
+    <string name="zen_mode_inspiration_driving" msgid="8237825783857483135">"Безпека на дорозі – понад усе"</string>
+    <string name="zen_mode_inspiration_immersive" msgid="4062437428955782933">"Зосередьтеся, щоб вас нічого не відволікало"</string>
+    <string name="zen_mode_inspiration_theater" msgid="9194190183262761230">"Для моментів, коли правила етикету важливі"</string>
+    <string name="zen_mode_inspiration_managed" msgid="4607010392213773917">"Отримуйте вказівки під час використання, щоб дбати про власну безпеку"</string>
+    <string name="zen_mode_inspiration_generic" msgid="9072064817144550243">"Контролюйте свою увагу"</string>
     <string name="warning_button_text" msgid="1274234338874005639">"Застереження"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Закрити"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Надіслати відгук про цей пристрій"</string>
@@ -4110,14 +4096,10 @@
     <string name="zen_access_disabled_package_warning" msgid="6565908224294537889">"Має залишатися ввімкненим, оскільки доступ до сповіщень увімкнено"</string>
     <string name="zen_access_revoke_warning_dialog_title" msgid="7377261509261811449">"Заборонити додатку <xliff:g id="APP">%1$s</xliff:g> доступ до режиму \"Не турбувати\"?"</string>
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Усі правила режиму \"Не турбувати\", які створив цей додаток, буде видалено."</string>
-    <!-- no translation found for zen_modes_access_warning_dialog_title (2072265702931309138) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_warning_dialog_summary (2351013300727701273) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_title (2703602440018176310) -->
-    <skip />
-    <!-- no translation found for zen_modes_access_revoke_warning_dialog_summary (4669243849023204217) -->
-    <skip />
+    <string name="zen_modes_access_warning_dialog_title" msgid="2072265702931309138">"Дозволити додатку <xliff:g id="APP">%1$s</xliff:g> доступ до режимів пріоритету?"</string>
+    <string name="zen_modes_access_warning_dialog_summary" msgid="2351013300727701273">"Додаток зможе вмикати й вимикати режим \"Не турбувати\", керувати режимами пріоритету й активувати їх, а також змінювати відповідні налаштування."</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="2703602440018176310">"Скасувати доступ до режимів пріоритету для додатка <xliff:g id="APP">%1$s</xliff:g>?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Усі режими, створені цим додатком, буде вилучено."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Не оптимізувати"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Оптимізувати"</string>
     <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"Акумулятор може розряджатися швидше. Додаток зможе використовувати його у фоновому режимі."</string>
@@ -5402,7 +5384,7 @@
     <string name="audio_sharing_pair_button_label" msgid="7987236990273083588">"Підключити новий пристрій"</string>
     <string name="audio_sharing_qrcode_button_label" msgid="3207039106555097659">"Показати QR-код"</string>
     <string name="audio_sharing_notification_title" msgid="1204798942946033005">"Ви надсилаєте аудіо"</string>
-    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Люди, які слухають, чутимуть ваш медіаконтент. Але не чутимуть виклики."</string>
+    <string name="audio_sharing_notification_content" msgid="1577180829878785642">"Інші користувачі зможуть чути ваші медіафайли, але не дзвінки."</string>
     <string name="audio_sharing_stop_button_label" msgid="8770519671470608849">"Припинити надсилання"</string>
     <string name="audio_sharing_settings_button_label" msgid="8574808650318270491">"Налаштування"</string>
     <string name="audio_sharing_disconnect_dialog_title" msgid="2192751727237748602">"Виберіть пристрій, який потрібно від’єднати"</string>
@@ -5441,7 +5423,7 @@
     <string name="audio_streams_no_password_summary" msgid="8976357323034830144">"Без пароля"</string>
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Докладніше"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Не вдається відтворити це потокове аудіо на пристрої \"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>\"."</string>
-    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Триває прослуховування"</string>
+    <string name="audio_streams_listening_now" msgid="4205614429222949176">"Відтворюється"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Припинити прослуховування"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Під’єднайте сумісні навушники"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Під’єднати пристрій"</string>
